--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/machinedeployments.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/machinedeployments.cluster.x-k8s.io.yaml
@@ -95,11 +95,13 @@
                         items:
                           type: string
                         type: array
+                        x-kubernetes-list-type: atomic
                     required:
                       - key
                       - operator
                     type: object
                   type: array
+                  x-kubernetes-list-type: atomic
                 matchLabels:
                   additionalProperties:
                     type: string
