--- a/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-kubeadm-bootstrap-manager-role.yaml
+++ b/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-kubeadm-bootstrap-manager-role.yaml
@@ -16,7 +16,6 @@ rules:
   - ""
   resources:
   - configmaps
-  - events
   - secrets
   verbs:
   - create
@@ -66,3 +65,10 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
