--- a/config/helm/patches/deployments/capi-kubeadm-bootstrap-controller-manager.yaml
+++ b/config/helm/patches/deployments/capi-kubeadm-bootstrap-controller-manager.yaml
@@ -13,7 +13,7 @@ spec:
         args:
         - --diagnostics-address=0.0.0.0:8080
         - --insecure-diagnostics
-        - --feature-gates=MachinePool=true,KubeadmBootstrapFormatIgnition=true
+        - --feature-gates=MachinePool=true,KubeadmBootstrapFormatIgnition=true,MachineSetPreflightChecks=true
         - --watch-filter={{ .Values.watchFilter }}
         - --v=0
         ports:
