--- a/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-control-plane-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-control-plane-controller-manager.yaml
@@ -45,7 +45,7 @@ spec:
       - args:
         - --diagnostics-address=0.0.0.0:8080
         - --insecure-diagnostics
-        - --feature-gates=ClusterTopology=true,KubeadmBootstrapFormatIgnition=true
+        - --feature-gates=ClusterTopology=true,KubeadmBootstrapFormatIgnition=true,MachineSetPreflightChecks=true
         - --watch-filter={{ .Values.watchFilter }}
         - --v=0
         command:
