--- a/helm/cluster-api/files/core/bases/machinedrainrules.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/machinedrainrules.cluster.x-k8s.io.yaml
@@ -15,7 +15,7 @@ metadata:
     clusterctl.cluster.x-k8s.io: ""
     clusterctl.cluster.x-k8s.io/move: ""
     helm.sh/chart: cluster-api
-  name: clusterresourcesetbindings.addons.cluster.x-k8s.io
+  name: machinedrainrules.cluster.x-k8s.io
 spec:
   conversion:
     strategy: Webhook
@@ -29,37 +29,26 @@ spec:
       conversionReviewVersions:
         - v1
         - v1beta1
-  group: addons.cluster.x-k8s.io
+  group: cluster.x-k8s.io
   names:
     categories:
       - cluster-api
-    kind: ClusterResourceSetBinding
-    listKind: ClusterResourceSetBindingList
-    plural: clusterresourcesetbindings
-    singular: clusterresourcesetbinding
+    kind: MachineDrainRule
+    listKind: MachineDrainRuleList
+    plural: machinedrainrules
+    singular: machinedrainrule
   scope: Namespaced
   versions:
-    - deprecated: true
-      name: v1alpha3
-      schema: {}
-      served: false
-      storage: false
-      subresources:
-        status: {}
     - additionalPrinterColumns:
-        - description: Time duration since creation of ClusterResourceSetBinding
-          jsonPath: .metadata.creationTimestamp
-          name: Age
-          type: date
-      deprecated: true
-      name: v1alpha4
-      schema: {}
-      served: false
-      storage: false
-      subresources:
-        status: {}
-    - additionalPrinterColumns:
-        - description: Time duration since creation of ClusterResourceSetBinding
+        - description: Drain behavior
+          jsonPath: .spec.drain.behavior
+          name: Behavior
+          type: string
+        - description: Drain order
+          jsonPath: .spec.drain.order
+          name: Order
+          type: string
+        - description: Time duration since creation of the MachineDrainRule
           jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
@@ -67,5 +56,4 @@ spec:
       schema: {}
       served: true
       storage: true
-      subresources:
-        status: {}
+      subresources: {}
