--- a/helm/cluster-api/files/core/patches/versions/v1alpha1/extensionconfigs.runtime.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha1/extensionconfigs.runtime.cluster.x-k8s.io.yaml
@@ -25,34 +25,33 @@
           description: ExtensionConfigSpec is the desired state of the ExtensionConfig
           properties:
             clientConfig:
-              description: ClientConfig defines how to communicate with the Extension server.
+              description: clientConfig defines how to communicate with the Extension server.
               properties:
                 caBundle:
-                  description: CABundle is a PEM encoded CA bundle which will be used to validate the Extension server's server certificate.
+                  description: caBundle is a PEM encoded CA bundle which will be used to validate the Extension server's server certificate.
                   format: byte
                   type: string
                 service:
                   description: |-
-                    Service is a reference to the Kubernetes service for the Extension server.
+                    service is a reference to the Kubernetes service for the Extension server.
                     Note: Exactly one of `url` or `service` must be specified.
-
 
                     If the Extension server is running within a cluster, then you should use `service`.
                   properties:
                     name:
-                      description: Name is the name of the service.
+                      description: name is the name of the service.
                       type: string
                     namespace:
-                      description: Namespace is the namespace of the service.
+                      description: namespace is the namespace of the service.
                       type: string
                     path:
                       description: |-
-                        Path is an optional URL path and if present may be any string permissible in
+                        path is an optional URL path and if present may be any string permissible in
                         a URL. If a path is set it will be used as prefix to the hook-specific path.
                       type: string
                     port:
                       description: |-
-                        Port is the port on the service that's hosting the Extension server.
+                        port is the port on the service that's hosting the Extension server.
                         Defaults to 443.
                         Port should be a valid port number (1-65535, inclusive).
                       format: int32
@@ -63,21 +62,17 @@
                   type: object
                 url:
                   description: |-
-                    URL gives the location of the Extension server, in standard URL form
+                    url gives the location of the Extension server, in standard URL form
                     (`scheme://host:port/path`).
                     Note: Exactly one of `url` or `service` must be specified.
 
-
                     The scheme must be "https".
-
 
                     The `host` should not refer to a service running in the cluster; use
                     the `service` field instead.
 
-
                     A path is optional, and if present may be any string permissible in
                     a URL. If a path is set it will be used as prefix to the hook-specific path.
-
 
                     Attempting to use a user or basic auth e.g. "user:password@" is not
                     allowed. Fragments ("#...") and query parameters ("?...") are not
@@ -86,7 +81,7 @@
               type: object
             namespaceSelector:
               description: |-
-                NamespaceSelector decides whether to call the hook for an object based
+                namespaceSelector decides whether to call the hook for an object based
                 on whether the namespace for that object matches the selector.
                 Defaults to the empty LabelSelector, which matches all objects.
               properties:
@@ -135,7 +130,7 @@
               additionalProperties:
                 type: string
               description: |-
-                Settings defines key value pairs to be passed to all calls
+                settings defines key value pairs to be passed to all calls
                 to all supported RuntimeExtensions.
                 Note: Settings can be overridden on the ClusterClass.
               type: object
@@ -146,7 +141,7 @@
           description: ExtensionConfigStatus is the current state of the ExtensionConfig
           properties:
             conditions:
-              description: Conditions define the current service state of the ExtensionConfig.
+              description: conditions define the current service state of the ExtensionConfig.
               items:
                 description: Condition defines an observation of a Cluster API resource operational state.
                 properties:
@@ -166,20 +161,20 @@
                     description: |-
                       The reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
-                      This field may not be empty.
+                      This field may be empty.
                     type: string
                   severity:
                     description: |-
-                      Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                      severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
                     type: string
                   status:
-                    description: Status of the condition, one of True, False, Unknown.
+                    description: status of the condition, one of True, False, Unknown.
                     type: string
                   type:
                     description: |-
-                      Type of condition in CamelCase or in foo.example.com/CamelCase.
+                      type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
                     type: string
@@ -190,26 +185,26 @@
                 type: object
               type: array
             handlers:
-              description: Handlers defines the current ExtensionHandlers supported by an Extension.
+              description: handlers defines the current ExtensionHandlers supported by an Extension.
               items:
                 description: ExtensionHandler specifies the details of a handler for a particular runtime hook registered by an Extension server.
                 properties:
                   failurePolicy:
                     description: |-
-                      FailurePolicy defines how failures in calls to the ExtensionHandler should be handled by a client.
+                      failurePolicy defines how failures in calls to the ExtensionHandler should be handled by a client.
                       Defaults to Fail if not set.
                     type: string
                   name:
-                    description: Name is the unique name of the ExtensionHandler.
+                    description: name is the unique name of the ExtensionHandler.
                     type: string
                   requestHook:
-                    description: RequestHook defines the versioned runtime hook which this ExtensionHandler serves.
+                    description: requestHook defines the versioned runtime hook which this ExtensionHandler serves.
                     properties:
                       apiVersion:
-                        description: APIVersion is the group and version of the Hook.
+                        description: apiVersion is the group and version of the Hook.
                         type: string
                       hook:
-                        description: Hook is the name of the hook.
+                        description: hook is the name of the hook.
                         type: string
                     required:
                       - apiVersion
@@ -217,7 +212,7 @@
                     type: object
                   timeoutSeconds:
                     description: |-
-                      TimeoutSeconds defines the timeout duration for client calls to the ExtensionHandler.
+                      timeoutSeconds defines the timeout duration for client calls to the ExtensionHandler.
                       Defaults to 10 is not set.
                     format: int32
                     type: integer
