--- a/helm/cluster-api/files/core/patches/versions/v1alpha1/ipaddressclaims.ipam.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha1/ipaddressclaims.ipam.cluster.x-k8s.io.yaml
@@ -25,7 +25,7 @@
           description: IPAddressClaimSpec is the desired state of an IPAddressClaim.
           properties:
             poolRef:
-              description: PoolRef is a reference to the pool from which an IP address should be created.
+              description: poolRef is a reference to the pool from which an IP address should be created.
               properties:
                 apiGroup:
                   description: |-
@@ -51,7 +51,7 @@
           description: IPAddressClaimStatus is the observed status of a IPAddressClaim.
           properties:
             addressRef:
-              description: AddressRef is a reference to the address that was created for this claim.
+              description: addressRef is a reference to the address that was created for this claim.
               properties:
                 name:
                   default: ""
@@ -60,14 +60,12 @@
                     This field is effectively required, but due to backwards compatibility is
                     allowed to be empty. Instances of this type with an empty value here are
                     almost certainly wrong.
-                    TODO: Add other useful fields. apiVersion, kind, uid?
                     More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                    TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.
                   type: string
               type: object
               x-kubernetes-map-type: atomic
             conditions:
-              description: Conditions summarises the current state of the IPAddressClaim
+              description: conditions summarises the current state of the IPAddressClaim
               items:
                 description: Condition defines an observation of a Cluster API resource operational state.
                 properties:
@@ -87,20 +85,20 @@
                     description: |-
                       The reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
-                      This field may not be empty.
+                      This field may be empty.
                     type: string
                   severity:
                     description: |-
-                      Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                      severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
                     type: string
                   status:
-                    description: Status of the condition, one of True, False, Unknown.
+                    description: status of the condition, one of True, False, Unknown.
                     type: string
                   type:
                     description: |-
-                      Type of condition in CamelCase or in foo.example.com/CamelCase.
+                      type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
                     type: string
