--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/clusterresourcesets.addons.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/clusterresourcesets.addons.cluster.x-k8s.io.yaml
@@ -5,7 +5,6 @@
       description: |-
         ClusterResourceSet is the Schema for the clusterresourcesets API.
 
-
         Deprecated: This type will be removed in one of the next releases.
       properties:
         apiVersion:
@@ -76,18 +75,18 @@
               type: object
               x-kubernetes-map-type: atomic
             resources:
-              description: Resources is a list of Secrets/ConfigMaps where each contains 1 or more resources to be applied to remote clusters.
+              description: resources is a list of Secrets/ConfigMaps where each contains 1 or more resources to be applied to remote clusters.
               items:
                 description: ResourceRef specifies a resource.
                 properties:
                   kind:
-                    description: 'Kind of the resource. Supported kinds are: Secrets and ConfigMaps.'
+                    description: 'kind of the resource. Supported kinds are: Secrets and ConfigMaps.'
                     enum:
                       - Secret
                       - ConfigMap
                     type: string
                   name:
-                    description: Name of the resource that is in the same namespace with ClusterResourceSet object.
+                    description: name of the resource that is in the same namespace with ClusterResourceSet object.
                     minLength: 1
                     type: string
                 required:
@@ -96,7 +95,7 @@
                 type: object
               type: array
             strategy:
-              description: Strategy is the strategy to be used during applying resources. Defaults to ApplyOnce. This field is immutable.
+              description: strategy is the strategy to be used during applying resources. Defaults to ApplyOnce. This field is immutable.
               enum:
                 - ApplyOnce
               type: string
@@ -107,7 +106,7 @@
           description: ClusterResourceSetStatus defines the observed state of ClusterResourceSet.
           properties:
             conditions:
-              description: Conditions defines current state of the ClusterResourceSet.
+              description: conditions defines current state of the ClusterResourceSet.
               items:
                 description: Condition defines an observation of a Cluster API resource operational state.
                 properties:
@@ -131,16 +130,16 @@
                     type: string
                   severity:
                     description: |-
-                      Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                      severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
                     type: string
                   status:
-                    description: Status of the condition, one of True, False, Unknown.
+                    description: status of the condition, one of True, False, Unknown.
                     type: string
                   type:
                     description: |-
-                      Type of condition in CamelCase or in foo.example.com/CamelCase.
+                      type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
                     type: string
@@ -150,7 +149,7 @@
                 type: object
               type: array
             observedGeneration:
-              description: ObservedGeneration reflects the generation of the most recently observed ClusterResourceSet.
+              description: observedGeneration reflects the generation of the most recently observed ClusterResourceSet.
               format: int64
               type: integer
           type: object
