--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/clusters.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/clusters.cluster.x-k8s.io.yaml
@@ -29,7 +29,7 @@
               properties:
                 apiServerPort:
                   description: |-
-                    APIServerPort specifies the port the API Server should bind to.
+                    apiServerPort specifies the port the API Server should bind to.
                     Defaults to 6443.
                   format: int32
                   type: integer
@@ -58,7 +58,7 @@
                   type: object
               type: object
             controlPlaneEndpoint:
-              description: ControlPlaneEndpoint represents the endpoint used to communicate with the control plane.
+              description: controlPlaneEndpoint represents the endpoint used to communicate with the control plane.
               properties:
                 host:
                   description: The hostname on which the API server is serving.
@@ -73,7 +73,7 @@
               type: object
             controlPlaneRef:
               description: |-
-                ControlPlaneRef is an optional reference to a provider-specific resource that holds
+                controlPlaneRef is an optional reference to a provider-specific resource that holds
                 the details for provisioning the Control Plane for a Cluster.
               properties:
                 apiVersion:
@@ -88,7 +88,6 @@
                     the event) or if no container name is specified "spec.containers[2]" (container with
                     index 2 in this pod). This syntax is chosen only to have some well-defined way of
                     referencing a part of an object.
-                    TODO: this design is not final and this field is subject to change in the future.
                   type: string
                 kind:
                   description: |-
@@ -119,7 +118,7 @@
               x-kubernetes-map-type: atomic
             infrastructureRef:
               description: |-
-                InfrastructureRef is a reference to a provider-specific resource that holds the details
+                infrastructureRef is a reference to a provider-specific resource that holds the details
                 for provisioning infrastructure for a cluster in said provider.
               properties:
                 apiVersion:
@@ -134,7 +133,6 @@
                     the event) or if no container name is specified "spec.containers[2]" (container with
                     index 2 in this pod). This syntax is chosen only to have some well-defined way of
                     referencing a part of an object.
-                    TODO: this design is not final and this field is subject to change in the future.
                   type: string
                 kind:
                   description: |-
@@ -164,14 +162,14 @@
               type: object
               x-kubernetes-map-type: atomic
             paused:
-              description: Paused can be used to prevent controllers from processing the Cluster and all its associated objects.
+              description: paused can be used to prevent controllers from processing the Cluster and all its associated objects.
               type: boolean
           type: object
         status:
           description: ClusterStatus defines the observed state of Cluster.
           properties:
             conditions:
-              description: Conditions defines current service state of the cluster.
+              description: conditions defines current service state of the cluster.
               items:
                 description: Condition defines an observation of a Cluster API resource operational state.
                 properties:
@@ -195,16 +193,16 @@
                     type: string
                   severity:
                     description: |-
-                      Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                      severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
                     type: string
                   status:
-                    description: Status of the condition, one of True, False, Unknown.
+                    description: status of the condition, one of True, False, Unknown.
                     type: string
                   type:
                     description: |-
-                      Type of condition in CamelCase or in foo.example.com/CamelCase.
+                      type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
                     type: string
@@ -214,10 +212,10 @@
                 type: object
               type: array
             controlPlaneInitialized:
-              description: ControlPlaneInitialized defines if the control plane has been initialized.
+              description: controlPlaneInitialized defines if the control plane has been initialized.
               type: boolean
             controlPlaneReady:
-              description: ControlPlaneReady defines if the control plane is ready.
+              description: controlPlaneReady defines if the control plane is ready.
               type: boolean
             failureDomains:
               additionalProperties:
@@ -228,35 +226,35 @@
                   attributes:
                     additionalProperties:
                       type: string
-                    description: Attributes is a free form map of attributes an infrastructure provider might use or require.
+                    description: attributes is a free form map of attributes an infrastructure provider might use or require.
                     type: object
                   controlPlane:
-                    description: ControlPlane determines if this failure domain is suitable for use by control plane machines.
+                    description: controlPlane determines if this failure domain is suitable for use by control plane machines.
                     type: boolean
                 type: object
-              description: FailureDomains is a slice of failure domain objects synced from the infrastructure provider.
+              description: failureDomains is a slice of failure domain objects synced from the infrastructure provider.
               type: object
             failureMessage:
               description: |-
-                FailureMessage indicates that there is a fatal problem reconciling the
+                failureMessage indicates that there is a fatal problem reconciling the
                 state, and will be set to a descriptive error message.
               type: string
             failureReason:
               description: |-
-                FailureReason indicates that there is a fatal problem reconciling the
+                failureReason indicates that there is a fatal problem reconciling the
                 state, and will be set to a token value suitable for
                 programmatic interpretation.
               type: string
             infrastructureReady:
-              description: InfrastructureReady is the state of the infrastructure provider.
+              description: infrastructureReady is the state of the infrastructure provider.
               type: boolean
             observedGeneration:
-              description: ObservedGeneration is the latest generation observed by the controller.
+              description: observedGeneration is the latest generation observed by the controller.
               format: int64
               type: integer
             phase:
               description: |-
-                Phase represents the current phase of cluster actuation.
+                phase represents the current phase of cluster actuation.
                 E.g. Pending, Running, Terminating, Failed etc.
               type: string
           type: object
