--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/machinedeployments.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/machinedeployments.cluster.x-k8s.io.yaml
@@ -5,7 +5,6 @@
       description: |-
         MachineDeployment is the Schema for the machinedeployments API.
 
-
         Deprecated: This type will be removed in one of the next releases.
       properties:
         apiVersion:
@@ -29,7 +28,7 @@
           description: MachineDeploymentSpec defines the desired state of MachineDeployment.
           properties:
             clusterName:
-              description: ClusterName is the name of the Cluster this object belongs to.
+              description: clusterName is the name of the Cluster this object belongs to.
               minLength: 1
               type: string
             minReadySeconds:
@@ -162,13 +161,13 @@
                   type: object
                 type:
                   description: |-
-                    Type of deployment. Currently the only supported strategy is
+                    type of deployment. Currently the only supported strategy is
                     "RollingUpdate".
                     Default is RollingUpdate.
                   type: string
               type: object
             template:
-              description: Template describes the machines that will be created.
+              description: template describes the machines that will be created.
               properties:
                 metadata:
                   description: |-
@@ -179,14 +178,14 @@
                       additionalProperties:
                         type: string
                       description: |-
-                        Annotations is an unstructured key value map stored with a resource that may be
+                        annotations is an unstructured key value map stored with a resource that may be
                         set by external tools to store and retrieve arbitrary metadata. They are not
                         queryable and should be preserved when modifying objects.
                         More info: http://kubernetes.io/docs/user-guide/annotations
                       type: object
                     generateName:
                       description: |-
-                        GenerateName is an optional prefix, used by the server, to generate a unique
+                        generateName is an optional prefix, used by the server, to generate a unique
                         name ONLY IF the Name field has not been provided.
                         If this field is used, the name returned to the client will be different
                         than the name passed. This value will also be combined with a unique suffix.
@@ -194,16 +193,13 @@
                         and may be truncated by the length of the suffix required to make the value
                         unique on the server.
 
-
                         If this field is specified and the generated name exists, the server will
                         NOT return a 409 - instead, it will either return 201 Created or 500 with Reason
                         ServerTimeout indicating a unique name could not be found in the time allotted, and the client
                         should retry (optionally after the time indicated in the Retry-After header).
 
-
                         Applied only if Name is not specified.
                         More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency
-
 
                         Deprecated: This field has no function and is going to be removed in a next release.
                       type: string
@@ -218,28 +214,25 @@
                       type: object
                     name:
                       description: |-
-                        Name must be unique within a namespace. Is required when creating resources, although
+                        name must be unique within a namespace. Is required when creating resources, although
                         some resources may allow a client to request the generation of an appropriate name
                         automatically. Name is primarily intended for creation idempotence and configuration
                         definition.
                         Cannot be updated.
                         More info: http://kubernetes.io/docs/user-guide/identifiers#names
 
-
                         Deprecated: This field has no function and is going to be removed in a next release.
                       type: string
                     namespace:
                       description: |-
-                        Namespace defines the space within each name must be unique. An empty namespace is
+                        namespace defines the space within each name must be unique. An empty namespace is
                         equivalent to the "default" namespace, but "default" is the canonical representation.
                         Not all objects are required to be scoped to a namespace - the value of this field for
                         those objects will be empty.
 
-
                         Must be a DNS_LABEL.
                         Cannot be updated.
                         More info: http://kubernetes.io/docs/user-guide/namespaces
-
 
                         Deprecated: This field has no function and is going to be removed in a next release.
                       type: string
@@ -249,7 +242,6 @@
                         been deleted, this object will be garbage collected. If this object is managed by a controller,
                         then an entry in this list will point to this controller, with the controller field set to true.
                         There cannot be more than one managing controller.
-
 
                         Deprecated: This field has no function and is going to be removed in a next release.
                       items:
@@ -306,12 +298,12 @@
                   properties:
                     bootstrap:
                       description: |-
-                        Bootstrap is a reference to a local struct which encapsulates
+                        bootstrap is a reference to a local struct which encapsulates
                         fields to configure the Machine’s bootstrapping mechanism.
                       properties:
                         configRef:
                           description: |-
-                            ConfigRef is a reference to a bootstrap provider-specific resource
+                            configRef is a reference to a bootstrap provider-specific resource
                             that holds configuration details. The reference is optional to
                             allow users/operators to specify Bootstrap.Data without
                             the need of a controller.
@@ -328,7 +320,6 @@
                                 the event) or if no container name is specified "spec.containers[2]" (container with
                                 index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                 referencing a part of an object.
-                                TODO: this design is not final and this field is subject to change in the future.
                               type: string
                             kind:
                               description: |-
@@ -359,30 +350,29 @@
                           x-kubernetes-map-type: atomic
                         data:
                           description: |-
-                            Data contains the bootstrap data, such as cloud-init details scripts.
+                            data contains the bootstrap data, such as cloud-init details scripts.
                             If nil, the Machine should remain in the Pending state.
-
 
                             Deprecated: Switch to DataSecretName.
                           type: string
                         dataSecretName:
                           description: |-
-                            DataSecretName is the name of the secret that stores the bootstrap data script.
+                            dataSecretName is the name of the secret that stores the bootstrap data script.
                             If nil, the Machine should remain in the Pending state.
                           type: string
                       type: object
                     clusterName:
-                      description: ClusterName is the name of the Cluster this object belongs to.
+                      description: clusterName is the name of the Cluster this object belongs to.
                       minLength: 1
                       type: string
                     failureDomain:
                       description: |-
-                        FailureDomain is the failure domain the machine will be created in.
+                        failureDomain is the failure domain the machine will be created in.
                         Must match a key in the FailureDomains map stored on the cluster object.
                       type: string
                     infrastructureRef:
                       description: |-
-                        InfrastructureRef is a required reference to a custom resource
+                        infrastructureRef is a required reference to a custom resource
                         offered by an infrastructure provider.
                       properties:
                         apiVersion:
@@ -397,7 +387,6 @@
                             the event) or if no container name is specified "spec.containers[2]" (container with
                             index 2 in this pod). This syntax is chosen only to have some well-defined way of
                             referencing a part of an object.
-                            TODO: this design is not final and this field is subject to change in the future.
                           type: string
                         kind:
                           description: |-
@@ -428,13 +417,13 @@
                       x-kubernetes-map-type: atomic
                     nodeDrainTimeout:
                       description: |-
-                        NodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
+                        nodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
                         The default value is 0, meaning that the node can be drained without any time limitations.
                         NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`
                       type: string
                     providerID:
                       description: |-
-                        ProviderID is the identification ID of the machine provided by the provider.
+                        providerID is the identification ID of the machine provided by the provider.
                         This field must match the provider ID as seen on the node object corresponding to this machine.
                         This field is required by higher level consumers of cluster-api. Example use case is cluster autoscaler
                         with cluster-api as provider. Clean-up logic in the autoscaler compares machines to nodes to find out
@@ -447,7 +436,7 @@
                       type: string
                     version:
                       description: |-
-                        Version defines the desired Kubernetes version.
+                        version defines the desired Kubernetes version.
                         This field is meant to be optionally used by bootstrap providers.
                       type: string
                   required:
@@ -475,7 +464,7 @@
               format: int64
               type: integer
             phase:
-              description: Phase represents the current phase of a MachineDeployment (ScalingUp, ScalingDown, Running, Failed, or Unknown).
+              description: phase represents the current phase of a MachineDeployment (ScalingUp, ScalingDown, Running, Failed, or Unknown).
               type: string
             readyReplicas:
               description: Total number of ready machines targeted by this deployment.
@@ -489,7 +478,7 @@
               type: integer
             selector:
               description: |-
-                Selector is the same as the label selector but in the string format to avoid introspection
+                selector is the same as the label selector but in the string format to avoid introspection
                 by clients. The string will be in the same format as the query-param syntax.
                 More info about label selectors: http://kubernetes.io/docs/user-guide/labels#label-selectors
               type: string
