--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/clusters.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/clusters.cluster.x-k8s.io.yaml
@@ -5,7 +5,6 @@
       description: |-
         Cluster is the Schema for the clusters API.
 
-
         Deprecated: This type will be removed in one of the next releases.
       properties:
         apiVersion:
@@ -33,7 +32,7 @@
               properties:
                 apiServerPort:
                   description: |-
-                    APIServerPort specifies the port the API Server should bind to.
+                    apiServerPort specifies the port the API Server should bind to.
                     Defaults to 6443.
                   format: int32
                   type: integer
@@ -62,7 +61,7 @@
                   type: object
               type: object
             controlPlaneEndpoint:
-              description: ControlPlaneEndpoint represents the endpoint used to communicate with the control plane.
+              description: controlPlaneEndpoint represents the endpoint used to communicate with the control plane.
               properties:
                 host:
                   description: The hostname on which the API server is serving.
@@ -77,7 +76,7 @@
               type: object
             controlPlaneRef:
               description: |-
-                ControlPlaneRef is an optional reference to a provider-specific resource that holds
+                controlPlaneRef is an optional reference to a provider-specific resource that holds
                 the details for provisioning the Control Plane for a Cluster.
               properties:
                 apiVersion:
@@ -92,7 +91,6 @@
                     the event) or if no container name is specified "spec.containers[2]" (container with
                     index 2 in this pod). This syntax is chosen only to have some well-defined way of
                     referencing a part of an object.
-                    TODO: this design is not final and this field is subject to change in the future.
                   type: string
                 kind:
                   description: |-
@@ -123,7 +121,7 @@
               x-kubernetes-map-type: atomic
             infrastructureRef:
               description: |-
-                InfrastructureRef is a reference to a provider-specific resource that holds the details
+                infrastructureRef is a reference to a provider-specific resource that holds the details
                 for provisioning infrastructure for a cluster in said provider.
               properties:
                 apiVersion:
@@ -138,7 +136,6 @@
                     the event) or if no container name is specified "spec.containers[2]" (container with
                     index 2 in this pod). This syntax is chosen only to have some well-defined way of
                     referencing a part of an object.
-                    TODO: this design is not final and this field is subject to change in the future.
                   type: string
                 kind:
                   description: |-
@@ -168,7 +165,7 @@
               type: object
               x-kubernetes-map-type: atomic
             paused:
-              description: Paused can be used to prevent controllers from processing the Cluster and all its associated objects.
+              description: paused can be used to prevent controllers from processing the Cluster and all its associated objects.
               type: boolean
             topology:
               description: |-
@@ -181,13 +178,12 @@
                   description: The name of the ClusterClass object to create the topology.
                   type: string
                 controlPlane:
-                  description: ControlPlane describes the cluster control plane.
+                  description: controlPlane describes the cluster control plane.
                   properties:
                     metadata:
                       description: |-
-                        Metadata is the metadata applied to the machines of the ControlPlane.
+                        metadata is the metadata applied to the machines of the ControlPlane.
                         At runtime this metadata is merged with the corresponding metadata from the ClusterClass.
-
 
                         This field is supported if and only if the control plane provider template
                         referenced in the ClusterClass is Machine based.
@@ -196,7 +192,7 @@
                           additionalProperties:
                             type: string
                           description: |-
-                            Annotations is an unstructured key value map stored with a resource that may be
+                            annotations is an unstructured key value map stored with a resource that may be
                             set by external tools to store and retrieve arbitrary metadata. They are not
                             queryable and should be preserved when modifying objects.
                             More info: http://kubernetes.io/docs/user-guide/annotations
@@ -213,7 +209,7 @@
                       type: object
                     replicas:
                       description: |-
-                        Replicas is the number of control plane nodes.
+                        replicas is the number of control plane nodes.
                         If the value is nil, the ControlPlane object is created without the number of Replicas
                         and it's assumed that the control plane controller does not implement support for this field.
                         When specified against a control plane provider that lacks support for this field, this value will be ignored.
@@ -222,7 +218,7 @@
                   type: object
                 rolloutAfter:
                   description: |-
-                    RolloutAfter performs a rollout of the entire cluster one component at a time,
+                    rolloutAfter performs a rollout of the entire cluster one component at a time,
                     control plane first and then machine deployments.
                   format: date-time
                   type: string
@@ -231,11 +227,11 @@
                   type: string
                 workers:
                   description: |-
-                    Workers encapsulates the different constructs that form the worker nodes
+                    workers encapsulates the different constructs that form the worker nodes
                     for the cluster.
                   properties:
                     machineDeployments:
-                      description: MachineDeployments is a list of machine deployments in the cluster.
+                      description: machineDeployments is a list of machine deployments in the cluster.
                       items:
                         description: |-
                           MachineDeploymentTopology specifies the different parameters for a set of worker nodes in the topology.
@@ -243,20 +239,20 @@
                         properties:
                           class:
                             description: |-
-                              Class is the name of the MachineDeploymentClass used to create the set of worker nodes.
+                              class is the name of the MachineDeploymentClass used to create the set of worker nodes.
                               This should match one of the deployment classes defined in the ClusterClass object
                               mentioned in the `Cluster.Spec.Class` field.
                             type: string
                           metadata:
                             description: |-
-                              Metadata is the metadata applied to the machines of the MachineDeployment.
+                              metadata is the metadata applied to the machines of the MachineDeployment.
                               At runtime this metadata is merged with the corresponding metadata from the ClusterClass.
                             properties:
                               annotations:
                                 additionalProperties:
                                   type: string
                                 description: |-
-                                  Annotations is an unstructured key value map stored with a resource that may be
+                                  annotations is an unstructured key value map stored with a resource that may be
                                   set by external tools to store and retrieve arbitrary metadata. They are not
                                   queryable and should be preserved when modifying objects.
                                   More info: http://kubernetes.io/docs/user-guide/annotations
@@ -273,14 +269,14 @@
                             type: object
                           name:
                             description: |-
-                              Name is the unique identifier for this MachineDeploymentTopology.
+                              name is the unique identifier for this MachineDeploymentTopology.
                               The value is used with other unique identifiers to create a MachineDeployment's Name
                               (e.g. cluster's name, etc). In case the name is greater than the allowed maximum length,
                               the values are hashed together.
                             type: string
                           replicas:
                             description: |-
-                              Replicas is the number of worker nodes belonging to this set.
+                              replicas is the number of worker nodes belonging to this set.
                               If the value is nil, the MachineDeployment is created without the number of Replicas (defaulting to zero)
                               and it's assumed that an external entity (like cluster autoscaler) is responsible for the management
                               of this value.
@@ -301,7 +297,7 @@
           description: ClusterStatus defines the observed state of Cluster.
           properties:
             conditions:
-              description: Conditions defines current service state of the cluster.
+              description: conditions defines current service state of the cluster.
               items:
                 description: Condition defines an observation of a Cluster API resource operational state.
                 properties:
@@ -325,16 +321,16 @@
                     type: string
                   severity:
                     description: |-
-                      Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                      severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
                     type: string
                   status:
-                    description: Status of the condition, one of True, False, Unknown.
+                    description: status of the condition, one of True, False, Unknown.
                     type: string
                   type:
                     description: |-
-                      Type of condition in CamelCase or in foo.example.com/CamelCase.
+                      type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
                     type: string
@@ -344,7 +340,7 @@
                 type: object
               type: array
             controlPlaneReady:
-              description: ControlPlaneReady defines if the control plane is ready.
+              description: controlPlaneReady defines if the control plane is ready.
               type: boolean
             failureDomains:
               additionalProperties:
@@ -355,35 +351,35 @@
                   attributes:
                     additionalProperties:
                       type: string
-                    description: Attributes is a free form map of attributes an infrastructure provider might use or require.
+                    description: attributes is a free form map of attributes an infrastructure provider might use or require.
                     type: object
                   controlPlane:
-                    description: ControlPlane determines if this failure domain is suitable for use by control plane machines.
+                    description: controlPlane determines if this failure domain is suitable for use by control plane machines.
                     type: boolean
                 type: object
-              description: FailureDomains is a slice of failure domain objects synced from the infrastructure provider.
+              description: failureDomains is a slice of failure domain objects synced from the infrastructure provider.
               type: object
             failureMessage:
               description: |-
-                FailureMessage indicates that there is a fatal problem reconciling the
+                failureMessage indicates that there is a fatal problem reconciling the
                 state, and will be set to a descriptive error message.
               type: string
             failureReason:
               description: |-
-                FailureReason indicates that there is a fatal problem reconciling the
+                failureReason indicates that there is a fatal problem reconciling the
                 state, and will be set to a token value suitable for
                 programmatic interpretation.
               type: string
             infrastructureReady:
-              description: InfrastructureReady is the state of the infrastructure provider.
+              description: infrastructureReady is the state of the infrastructure provider.
               type: boolean
             observedGeneration:
-              description: ObservedGeneration is the latest generation observed by the controller.
+              description: observedGeneration is the latest generation observed by the controller.
               format: int64
               type: integer
             phase:
               description: |-
-                Phase represents the current phase of cluster actuation.
+                phase represents the current phase of cluster actuation.
                 E.g. Pending, Running, Terminating, Failed etc.
               type: string
           type: object
