--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/machinedeployments.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/machinedeployments.cluster.x-k8s.io.yaml
@@ -5,7 +5,6 @@
       description: |-
         MachineDeployment is the Schema for the machinedeployments API.
 
-
         Deprecated: This type will be removed in one of the next releases.
       properties:
         apiVersion:
@@ -29,7 +28,7 @@
           description: MachineDeploymentSpec defines the desired state of MachineDeployment.
           properties:
             clusterName:
-              description: ClusterName is the name of the Cluster this object belongs to.
+              description: clusterName is the name of the Cluster this object belongs to.
               minLength: 1
               type: string
             minReadySeconds:
@@ -125,7 +124,7 @@
                   properties:
                     deletePolicy:
                       description: |-
-                        DeletePolicy defines the policy used by the MachineDeployment to identify nodes to delete when downscaling.
+                        deletePolicy defines the policy used by the MachineDeployment to identify nodes to delete when downscaling.
                         Valid values are "Random, "Newest", "Oldest"
                         When no value is supplied, the default DeletePolicy of MachineSet is used
                       enum:
@@ -173,7 +172,7 @@
                   type: object
                 type:
                   description: |-
-                    Type of deployment.
+                    type of deployment.
                     Default is RollingUpdate.
                   enum:
                     - RollingUpdate
@@ -181,7 +180,7 @@
                   type: string
               type: object
             template:
-              description: Template describes the machines that will be created.
+              description: template describes the machines that will be created.
               properties:
                 metadata:
                   description: |-
@@ -192,7 +191,7 @@
                       additionalProperties:
                         type: string
                       description: |-
-                        Annotations is an unstructured key value map stored with a resource that may be
+                        annotations is an unstructured key value map stored with a resource that may be
                         set by external tools to store and retrieve arbitrary metadata. They are not
                         queryable and should be preserved when modifying objects.
                         More info: http://kubernetes.io/docs/user-guide/annotations
@@ -214,12 +213,12 @@
                   properties:
                     bootstrap:
                       description: |-
-                        Bootstrap is a reference to a local struct which encapsulates
+                        bootstrap is a reference to a local struct which encapsulates
                         fields to configure the Machine’s bootstrapping mechanism.
                       properties:
                         configRef:
                           description: |-
-                            ConfigRef is a reference to a bootstrap provider-specific resource
+                            configRef is a reference to a bootstrap provider-specific resource
                             that holds configuration details. The reference is optional to
                             allow users/operators to specify Bootstrap.DataSecretName without
                             the need of a controller.
@@ -236,7 +235,6 @@
                                 the event) or if no container name is specified "spec.containers[2]" (container with
                                 index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                 referencing a part of an object.
-                                TODO: this design is not final and this field is subject to change in the future.
                               type: string
                             kind:
                               description: |-
@@ -267,22 +265,22 @@
                           x-kubernetes-map-type: atomic
                         dataSecretName:
                           description: |-
-                            DataSecretName is the name of the secret that stores the bootstrap data script.
+                            dataSecretName is the name of the secret that stores the bootstrap data script.
                             If nil, the Machine should remain in the Pending state.
                           type: string
                       type: object
                     clusterName:
-                      description: ClusterName is the name of the Cluster this object belongs to.
+                      description: clusterName is the name of the Cluster this object belongs to.
                       minLength: 1
                       type: string
                     failureDomain:
                       description: |-
-                        FailureDomain is the failure domain the machine will be created in.
+                        failureDomain is the failure domain the machine will be created in.
                         Must match a key in the FailureDomains map stored on the cluster object.
                       type: string
                     infrastructureRef:
                       description: |-
-                        InfrastructureRef is a required reference to a custom resource
+                        infrastructureRef is a required reference to a custom resource
                         offered by an infrastructure provider.
                       properties:
                         apiVersion:
@@ -297,7 +295,6 @@
                             the event) or if no container name is specified "spec.containers[2]" (container with
                             index 2 in this pod). This syntax is chosen only to have some well-defined way of
                             referencing a part of an object.
-                            TODO: this design is not final and this field is subject to change in the future.
                           type: string
                         kind:
                           description: |-
@@ -328,13 +325,13 @@
                       x-kubernetes-map-type: atomic
                     nodeDrainTimeout:
                       description: |-
-                        NodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
+                        nodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
                         The default value is 0, meaning that the node can be drained without any time limitations.
                         NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`
                       type: string
                     providerID:
                       description: |-
-                        ProviderID is the identification ID of the machine provided by the provider.
+                        providerID is the identification ID of the machine provided by the provider.
                         This field must match the provider ID as seen on the node object corresponding to this machine.
                         This field is required by higher level consumers of cluster-api. Example use case is cluster autoscaler
                         with cluster-api as provider. Clean-up logic in the autoscaler compares machines to nodes to find out
@@ -347,7 +344,7 @@
                       type: string
                     version:
                       description: |-
-                        Version defines the desired Kubernetes version.
+                        version defines the desired Kubernetes version.
                         This field is meant to be optionally used by bootstrap providers.
                       type: string
                   required:
@@ -371,7 +368,7 @@
               format: int32
               type: integer
             conditions:
-              description: Conditions defines current service state of the MachineDeployment.
+              description: conditions defines current service state of the MachineDeployment.
               items:
                 description: Condition defines an observation of a Cluster API resource operational state.
                 properties:
@@ -395,16 +392,16 @@
                     type: string
                   severity:
                     description: |-
-                      Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                      severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
                     type: string
                   status:
-                    description: Status of the condition, one of True, False, Unknown.
+                    description: status of the condition, one of True, False, Unknown.
                     type: string
                   type:
                     description: |-
-                      Type of condition in CamelCase or in foo.example.com/CamelCase.
+                      type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
                     type: string
@@ -418,7 +415,7 @@
               format: int64
               type: integer
             phase:
-              description: Phase represents the current phase of a MachineDeployment (ScalingUp, ScalingDown, Running, Failed, or Unknown).
+              description: phase represents the current phase of a MachineDeployment (ScalingUp, ScalingDown, Running, Failed, or Unknown).
               type: string
             readyReplicas:
               description: Total number of ready machines targeted by this deployment.
@@ -432,7 +429,7 @@
               type: integer
             selector:
               description: |-
-                Selector is the same as the label selector but in the string format to avoid introspection
+                selector is the same as the label selector but in the string format to avoid introspection
                 by clients. The string will be in the same format as the query-param syntax.
                 More info about label selectors: http://kubernetes.io/docs/user-guide/labels#label-selectors
               type: string
