--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/machinepools.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/machinepools.cluster.x-k8s.io.yaml
@@ -5,7 +5,6 @@
       description: |-
         MachinePool is the Schema for the machinepools API.
 
-
         Deprecated: This type will be removed in one of the next releases.
       properties:
         apiVersion:
@@ -29,11 +28,11 @@
           description: MachinePoolSpec defines the desired state of MachinePool.
           properties:
             clusterName:
-              description: ClusterName is the name of the Cluster this object belongs to.
+              description: clusterName is the name of the Cluster this object belongs to.
               minLength: 1
               type: string
             failureDomains:
-              description: FailureDomains is the list of failure domains this MachinePool should be attached to.
+              description: failureDomains is the list of failure domains this MachinePool should be attached to.
               items:
                 type: string
               type: array
@@ -47,7 +46,7 @@
               type: integer
             providerIDList:
               description: |-
-                ProviderIDList are the identification IDs of machine instances provided by the provider.
+                providerIDList are the identification IDs of machine instances provided by the provider.
                 This field must match the provider IDs as seen on the node objects corresponding to a machine pool's machine instances.
               items:
                 type: string
@@ -59,7 +58,7 @@
               format: int32
               type: integer
             template:
-              description: Template describes the machines that will be created.
+              description: template describes the machines that will be created.
               properties:
                 metadata:
                   description: |-
@@ -70,7 +69,7 @@
                       additionalProperties:
                         type: string
                       description: |-
-                        Annotations is an unstructured key value map stored with a resource that may be
+                        annotations is an unstructured key value map stored with a resource that may be
                         set by external tools to store and retrieve arbitrary metadata. They are not
                         queryable and should be preserved when modifying objects.
                         More info: http://kubernetes.io/docs/user-guide/annotations
@@ -92,12 +91,12 @@
                   properties:
                     bootstrap:
                       description: |-
-                        Bootstrap is a reference to a local struct which encapsulates
+                        bootstrap is a reference to a local struct which encapsulates
                         fields to configure the Machine’s bootstrapping mechanism.
                       properties:
                         configRef:
                           description: |-
-                            ConfigRef is a reference to a bootstrap provider-specific resource
+                            configRef is a reference to a bootstrap provider-specific resource
                             that holds configuration details. The reference is optional to
                             allow users/operators to specify Bootstrap.DataSecretName without
                             the need of a controller.
@@ -114,7 +113,6 @@
                                 the event) or if no container name is specified "spec.containers[2]" (container with
                                 index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                 referencing a part of an object.
-                                TODO: this design is not final and this field is subject to change in the future.
                               type: string
                             kind:
                               description: |-
@@ -145,22 +143,22 @@
                           x-kubernetes-map-type: atomic
                         dataSecretName:
                           description: |-
-                            DataSecretName is the name of the secret that stores the bootstrap data script.
+                            dataSecretName is the name of the secret that stores the bootstrap data script.
                             If nil, the Machine should remain in the Pending state.
                           type: string
                       type: object
                     clusterName:
-                      description: ClusterName is the name of the Cluster this object belongs to.
+                      description: clusterName is the name of the Cluster this object belongs to.
                       minLength: 1
                       type: string
                     failureDomain:
                       description: |-
-                        FailureDomain is the failure domain the machine will be created in.
+                        failureDomain is the failure domain the machine will be created in.
                         Must match a key in the FailureDomains map stored on the cluster object.
                       type: string
                     infrastructureRef:
                       description: |-
-                        InfrastructureRef is a required reference to a custom resource
+                        infrastructureRef is a required reference to a custom resource
                         offered by an infrastructure provider.
                       properties:
                         apiVersion:
@@ -175,7 +173,6 @@
                             the event) or if no container name is specified "spec.containers[2]" (container with
                             index 2 in this pod). This syntax is chosen only to have some well-defined way of
                             referencing a part of an object.
-                            TODO: this design is not final and this field is subject to change in the future.
                           type: string
                         kind:
                           description: |-
@@ -206,13 +203,13 @@
                       x-kubernetes-map-type: atomic
                     nodeDrainTimeout:
                       description: |-
-                        NodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
+                        nodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
                         The default value is 0, meaning that the node can be drained without any time limitations.
                         NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`
                       type: string
                     providerID:
                       description: |-
-                        ProviderID is the identification ID of the machine provided by the provider.
+                        providerID is the identification ID of the machine provided by the provider.
                         This field must match the provider ID as seen on the node object corresponding to this machine.
                         This field is required by higher level consumers of cluster-api. Example use case is cluster autoscaler
                         with cluster-api as provider. Clean-up logic in the autoscaler compares machines to nodes to find out
@@ -225,7 +222,7 @@
                       type: string
                     version:
                       description: |-
-                        Version defines the desired Kubernetes version.
+                        version defines the desired Kubernetes version.
                         This field is meant to be optionally used by bootstrap providers.
                       type: string
                   required:
@@ -246,10 +243,10 @@
               format: int32
               type: integer
             bootstrapReady:
-              description: BootstrapReady is the state of the bootstrap provider.
+              description: bootstrapReady is the state of the bootstrap provider.
               type: boolean
             conditions:
-              description: Conditions define the current service state of the MachinePool.
+              description: conditions define the current service state of the MachinePool.
               items:
                 description: Condition defines an observation of a Cluster API resource operational state.
                 properties:
@@ -273,16 +270,16 @@
                     type: string
                   severity:
                     description: |-
-                      Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                      severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
                     type: string
                   status:
-                    description: Status of the condition, one of True, False, Unknown.
+                    description: status of the condition, one of True, False, Unknown.
                     type: string
                   type:
                     description: |-
-                      Type of condition in CamelCase or in foo.example.com/CamelCase.
+                      type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
                     type: string
@@ -293,38 +290,21 @@
               type: array
             failureMessage:
               description: |-
-                FailureMessage indicates that there is a problem reconciling the state,
+                failureMessage indicates that there is a problem reconciling the state,
                 and will be set to a descriptive error message.
               type: string
             failureReason:
               description: |-
-                FailureReason indicates that there is a problem reconciling the state, and
+                failureReason indicates that there is a problem reconciling the state, and
                 will be set to a token value suitable for programmatic interpretation.
               type: string
             infrastructureReady:
-              description: InfrastructureReady is the state of the infrastructure provider.
+              description: infrastructureReady is the state of the infrastructure provider.
               type: boolean
             nodeRefs:
-              description: NodeRefs will point to the corresponding Nodes if it they exist.
+              description: nodeRefs will point to the corresponding Nodes if it they exist.
               items:
-                description: |-
-                  ObjectReference contains enough information to let you inspect or modify the referred object.
-                  ---
-                  New uses of this type are discouraged because of difficulty describing its usage when embedded in APIs.
-                   1. Ignored fields.  It includes many fields which are not generally honored.  For instance, ResourceVersion and FieldPath are both very rarely valid in actual usage.
-                   2. Invalid usage help.  It is impossible to add specific help for individual usage.  In most embedded usages, there are particular
-                      restrictions like, "must refer only to types A and B" or "UID not honored" or "name must be restricted".
-                      Those cannot be well described when embedded.
-                   3. Inconsistent validation.  Because the usages are different, the validation rules are different by usage, which makes it hard for users to predict what will happen.
-                   4. The fields are both imprecise and overly precise.  Kind is not a precise mapping to a URL. This can produce ambiguity
-                      during interpretation and require a REST mapping.  In most cases, the dependency is on the group,resource tuple
-                      and the version of the actual struct is irrelevant.
-                   5. We cannot easily change it.  Because this type is embedded in many locations, updates to this type
-                      will affect numerous schemas.  Don't make new APIs embed an underspecified API type they do not control.
-
-
-                  Instead of using this type, create a locally provided and used type that is well-focused on your reference.
-                  For example, ServiceReferences for admission registration: https://github.com/kubernetes/api/blob/release-1.17/admissionregistration/v1/types.go#L533 .
+                description: ObjectReference contains enough information to let you inspect or modify the referred object.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -338,7 +318,6 @@
                       the event) or if no container name is specified "spec.containers[2]" (container with
                       index 2 in this pod). This syntax is chosen only to have some well-defined way of
                       referencing a part of an object.
-                      TODO: this design is not final and this field is subject to change in the future.
                     type: string
                   kind:
                     description: |-
@@ -369,12 +348,12 @@
                 x-kubernetes-map-type: atomic
               type: array
             observedGeneration:
-              description: ObservedGeneration is the latest generation observed by the controller.
+              description: observedGeneration is the latest generation observed by the controller.
               format: int64
               type: integer
             phase:
               description: |-
-                Phase represents the current phase of cluster actuation.
+                phase represents the current phase of cluster actuation.
                 E.g. Pending, Running, Terminating, Failed etc.
               type: string
             readyReplicas:
@@ -382,7 +361,7 @@
               format: int32
               type: integer
             replicas:
-              description: Replicas is the most recently observed number of replicas.
+              description: replicas is the most recently observed number of replicas.
               format: int32
               type: integer
             unavailableReplicas:
