--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/machines.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/machines.cluster.x-k8s.io.yaml
@@ -5,7 +5,6 @@
       description: |-
         Machine is the Schema for the machines API.
 
-
         Deprecated: This type will be removed in one of the next releases.
       properties:
         apiVersion:
@@ -30,12 +29,12 @@
           properties:
             bootstrap:
               description: |-
-                Bootstrap is a reference to a local struct which encapsulates
+                bootstrap is a reference to a local struct which encapsulates
                 fields to configure the Machine’s bootstrapping mechanism.
               properties:
                 configRef:
                   description: |-
-                    ConfigRef is a reference to a bootstrap provider-specific resource
+                    configRef is a reference to a bootstrap provider-specific resource
                     that holds configuration details. The reference is optional to
                     allow users/operators to specify Bootstrap.DataSecretName without
                     the need of a controller.
@@ -52,7 +51,6 @@
                         the event) or if no container name is specified "spec.containers[2]" (container with
                         index 2 in this pod). This syntax is chosen only to have some well-defined way of
                         referencing a part of an object.
-                        TODO: this design is not final and this field is subject to change in the future.
                       type: string
                     kind:
                       description: |-
@@ -83,22 +81,22 @@
                   x-kubernetes-map-type: atomic
                 dataSecretName:
                   description: |-
-                    DataSecretName is the name of the secret that stores the bootstrap data script.
+                    dataSecretName is the name of the secret that stores the bootstrap data script.
                     If nil, the Machine should remain in the Pending state.
                   type: string
               type: object
             clusterName:
-              description: ClusterName is the name of the Cluster this object belongs to.
+              description: clusterName is the name of the Cluster this object belongs to.
               minLength: 1
               type: string
             failureDomain:
               description: |-
-                FailureDomain is the failure domain the machine will be created in.
+                failureDomain is the failure domain the machine will be created in.
                 Must match a key in the FailureDomains map stored on the cluster object.
               type: string
             infrastructureRef:
               description: |-
-                InfrastructureRef is a required reference to a custom resource
+                infrastructureRef is a required reference to a custom resource
                 offered by an infrastructure provider.
               properties:
                 apiVersion:
@@ -113,7 +111,6 @@
                     the event) or if no container name is specified "spec.containers[2]" (container with
                     index 2 in this pod). This syntax is chosen only to have some well-defined way of
                     referencing a part of an object.
-                    TODO: this design is not final and this field is subject to change in the future.
                   type: string
                 kind:
                   description: |-
@@ -144,13 +141,13 @@
               x-kubernetes-map-type: atomic
             nodeDrainTimeout:
               description: |-
-                NodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
+                nodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
                 The default value is 0, meaning that the node can be drained without any time limitations.
                 NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`
               type: string
             providerID:
               description: |-
-                ProviderID is the identification ID of the machine provided by the provider.
+                providerID is the identification ID of the machine provided by the provider.
                 This field must match the provider ID as seen on the node object corresponding to this machine.
                 This field is required by higher level consumers of cluster-api. Example use case is cluster autoscaler
                 with cluster-api as provider. Clean-up logic in the autoscaler compares machines to nodes to find out
@@ -163,7 +160,7 @@
               type: string
             version:
               description: |-
-                Version defines the desired Kubernetes version.
+                version defines the desired Kubernetes version.
                 This field is meant to be optionally used by bootstrap providers.
               type: string
           required:
@@ -176,7 +173,7 @@
           properties:
             addresses:
               description: |-
-                Addresses is a list of addresses assigned to the machine.
+                addresses is a list of addresses assigned to the machine.
                 This field is copied from the infrastructure provider reference.
               items:
                 description: MachineAddress contains information for the node's address.
@@ -193,10 +190,10 @@
                 type: object
               type: array
             bootstrapReady:
-              description: BootstrapReady is the state of the bootstrap provider.
+              description: bootstrapReady is the state of the bootstrap provider.
               type: boolean
             conditions:
-              description: Conditions defines current service state of the Machine.
+              description: conditions defines current service state of the Machine.
               items:
                 description: Condition defines an observation of a Cluster API resource operational state.
                 properties:
@@ -220,16 +217,16 @@
                     type: string
                   severity:
                     description: |-
-                      Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                      severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
                     type: string
                   status:
-                    description: Status of the condition, one of True, False, Unknown.
+                    description: status of the condition, one of True, False, Unknown.
                     type: string
                   type:
                     description: |-
-                      Type of condition in CamelCase or in foo.example.com/CamelCase.
+                      type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
                     type: string
@@ -240,10 +237,9 @@
               type: array
             failureMessage:
               description: |-
-                FailureMessage will be set in the event that there is a terminal problem
+                failureMessage will be set in the event that there is a terminal problem
                 reconciling the Machine and will contain a more verbose string suitable
                 for logging and human consumption.
-
 
                 This field should not be set for transitive errors that a controller
                 faces that are expected to be fixed automatically over
@@ -253,7 +249,6 @@
                 of terminal errors would be invalid combinations of settings in the
                 spec, values that are unsupported by the controller, or the
                 responsible controller itself being critically misconfigured.
-
 
                 Any transient errors that occur during the reconciliation of Machines
                 can be added as events to the Machine object and/or logged in the
@@ -261,10 +256,9 @@
               type: string
             failureReason:
               description: |-
-                FailureReason will be set in the event that there is a terminal problem
+                failureReason will be set in the event that there is a terminal problem
                 reconciling the Machine and will contain a succinct value suitable
                 for machine interpretation.
-
 
                 This field should not be set for transitive errors that a controller
                 faces that are expected to be fixed automatically over
@@ -275,21 +269,20 @@
                 spec, values that are unsupported by the controller, or the
                 responsible controller itself being critically misconfigured.
 
-
                 Any transient errors that occur during the reconciliation of Machines
                 can be added as events to the Machine object and/or logged in the
                 controller's output.
               type: string
             infrastructureReady:
-              description: InfrastructureReady is the state of the infrastructure provider.
+              description: infrastructureReady is the state of the infrastructure provider.
               type: boolean
             lastUpdated:
-              description: LastUpdated identifies when the phase of the Machine last transitioned.
+              description: lastUpdated identifies when the phase of the Machine last transitioned.
               format: date-time
               type: string
             nodeInfo:
               description: |-
-                NodeInfo is a set of ids/uuids to uniquely identify the node.
+                nodeInfo is a set of ids/uuids to uniquely identify the node.
                 More info: https://kubernetes.io/docs/concepts/nodes/node/#info
               properties:
                 architecture:
@@ -305,7 +298,7 @@
                   description: Kernel Version reported by the node from 'uname -r' (e.g. 3.16.0-0.bpo.4-amd64).
                   type: string
                 kubeProxyVersion:
-                  description: KubeProxy Version reported by the node.
+                  description: 'Deprecated: KubeProxy Version reported by the node.'
                   type: string
                 kubeletVersion:
                   description: Kubelet Version reported by the node.
@@ -341,7 +334,7 @@
                 - systemUUID
               type: object
             nodeRef:
-              description: NodeRef will point to the corresponding Node if it exists.
+              description: nodeRef will point to the corresponding Node if it exists.
               properties:
                 apiVersion:
                   description: API version of the referent.
@@ -355,7 +348,6 @@
                     the event) or if no container name is specified "spec.containers[2]" (container with
                     index 2 in this pod). This syntax is chosen only to have some well-defined way of
                     referencing a part of an object.
-                    TODO: this design is not final and this field is subject to change in the future.
                   type: string
                 kind:
                   description: |-
@@ -385,17 +377,17 @@
               type: object
               x-kubernetes-map-type: atomic
             observedGeneration:
-              description: ObservedGeneration is the latest generation observed by the controller.
+              description: observedGeneration is the latest generation observed by the controller.
               format: int64
               type: integer
             phase:
               description: |-
-                Phase represents the current phase of machine actuation.
+                phase represents the current phase of machine actuation.
                 E.g. Pending, Running, Terminating, Failed etc.
               type: string
             version:
               description: |-
-                Version specifies the current version of Kubernetes running
+                version specifies the current version of Kubernetes running
                 on the corresponding Node. This is meant to be a means of bubbling
                 up status from the Node to the Machine.
                 It is entirely optional, but useful for end-user UX if it’s present.
