--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/machinesets.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/machinesets.cluster.x-k8s.io.yaml
@@ -5,7 +5,6 @@
       description: |-
         MachineSet is the Schema for the machinesets API.
 
-
         Deprecated: This type will be removed in one of the next releases.
       properties:
         apiVersion:
@@ -29,12 +28,12 @@
           description: MachineSetSpec defines the desired state of MachineSet.
           properties:
             clusterName:
-              description: ClusterName is the name of the Cluster this object belongs to.
+              description: clusterName is the name of the Cluster this object belongs to.
               minLength: 1
               type: string
             deletePolicy:
               description: |-
-                DeletePolicy defines the policy used to identify nodes to delete when downscaling.
+                deletePolicy defines the policy used to identify nodes to delete when downscaling.
                 Defaults to "Random".  Valid values are "Random, "Newest", "Oldest"
               enum:
                 - Random
@@ -43,21 +42,21 @@
               type: string
             minReadySeconds:
               description: |-
-                MinReadySeconds is the minimum number of seconds for which a newly created machine should be ready.
+                minReadySeconds is the minimum number of seconds for which a newly created machine should be ready.
                 Defaults to 0 (machine will be considered available as soon as it is ready)
               format: int32
               type: integer
             replicas:
               default: 1
               description: |-
-                Replicas is the number of desired replicas.
+                replicas is the number of desired replicas.
                 This is a pointer to distinguish between explicit zero and unspecified.
                 Defaults to 1.
               format: int32
               type: integer
             selector:
               description: |-
-                Selector is a label query over machines that should match the replica count.
+                selector is a label query over machines that should match the replica count.
                 Label keys and values that must match in order to be controlled by this MachineSet.
                 It must match the machine template's labels.
                 More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#label-selectors
@@ -105,7 +104,7 @@
               x-kubernetes-map-type: atomic
             template:
               description: |-
-                Template is the object that describes the machine that will be created if
+                template is the object that describes the machine that will be created if
                 insufficient replicas are detected.
                 Object references to custom resources are treated as templates.
               properties:
@@ -118,7 +117,7 @@
                       additionalProperties:
                         type: string
                       description: |-
-                        Annotations is an unstructured key value map stored with a resource that may be
+                        annotations is an unstructured key value map stored with a resource that may be
                         set by external tools to store and retrieve arbitrary metadata. They are not
                         queryable and should be preserved when modifying objects.
                         More info: http://kubernetes.io/docs/user-guide/annotations
@@ -140,12 +139,12 @@
                   properties:
                     bootstrap:
                       description: |-
-                        Bootstrap is a reference to a local struct which encapsulates
+                        bootstrap is a reference to a local struct which encapsulates
                         fields to configure the Machine’s bootstrapping mechanism.
                       properties:
                         configRef:
                           description: |-
-                            ConfigRef is a reference to a bootstrap provider-specific resource
+                            configRef is a reference to a bootstrap provider-specific resource
                             that holds configuration details. The reference is optional to
                             allow users/operators to specify Bootstrap.DataSecretName without
                             the need of a controller.
@@ -162,7 +161,6 @@
                                 the event) or if no container name is specified "spec.containers[2]" (container with
                                 index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                 referencing a part of an object.
-                                TODO: this design is not final and this field is subject to change in the future.
                               type: string
                             kind:
                               description: |-
@@ -193,22 +191,22 @@
                           x-kubernetes-map-type: atomic
                         dataSecretName:
                           description: |-
-                            DataSecretName is the name of the secret that stores the bootstrap data script.
+                            dataSecretName is the name of the secret that stores the bootstrap data script.
                             If nil, the Machine should remain in the Pending state.
                           type: string
                       type: object
                     clusterName:
-                      description: ClusterName is the name of the Cluster this object belongs to.
+                      description: clusterName is the name of the Cluster this object belongs to.
                       minLength: 1
                       type: string
                     failureDomain:
                       description: |-
-                        FailureDomain is the failure domain the machine will be created in.
+                        failureDomain is the failure domain the machine will be created in.
                         Must match a key in the FailureDomains map stored on the cluster object.
                       type: string
                     infrastructureRef:
                       description: |-
-                        InfrastructureRef is a required reference to a custom resource
+                        infrastructureRef is a required reference to a custom resource
                         offered by an infrastructure provider.
                       properties:
                         apiVersion:
@@ -223,7 +221,6 @@
                             the event) or if no container name is specified "spec.containers[2]" (container with
                             index 2 in this pod). This syntax is chosen only to have some well-defined way of
                             referencing a part of an object.
-                            TODO: this design is not final and this field is subject to change in the future.
                           type: string
                         kind:
                           description: |-
@@ -254,13 +251,13 @@
                       x-kubernetes-map-type: atomic
                     nodeDrainTimeout:
                       description: |-
-                        NodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
+                        nodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
                         The default value is 0, meaning that the node can be drained without any time limitations.
                         NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`
                       type: string
                     providerID:
                       description: |-
-                        ProviderID is the identification ID of the machine provided by the provider.
+                        providerID is the identification ID of the machine provided by the provider.
                         This field must match the provider ID as seen on the node object corresponding to this machine.
                         This field is required by higher level consumers of cluster-api. Example use case is cluster autoscaler
                         with cluster-api as provider. Clean-up logic in the autoscaler compares machines to nodes to find out
@@ -273,7 +270,7 @@
                       type: string
                     version:
                       description: |-
-                        Version defines the desired Kubernetes version.
+                        version defines the desired Kubernetes version.
                         This field is meant to be optionally used by bootstrap providers.
                       type: string
                   required:
@@ -294,7 +291,7 @@
               format: int32
               type: integer
             conditions:
-              description: Conditions defines current service state of the MachineSet.
+              description: conditions defines current service state of the MachineSet.
               items:
                 description: Condition defines an observation of a Cluster API resource operational state.
                 properties:
@@ -318,16 +315,16 @@
                     type: string
                   severity:
                     description: |-
-                      Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                      severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
                     type: string
                   status:
-                    description: Status of the condition, one of True, False, Unknown.
+                    description: status of the condition, one of True, False, Unknown.
                     type: string
                   type:
                     description: |-
-                      Type of condition in CamelCase or in foo.example.com/CamelCase.
+                      type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
                     type: string
@@ -346,7 +343,6 @@
                 interpretation, while FailureMessage will contain a more verbose
                 string suitable for logging and human consumption.
 
-
                 These fields should not be set for transitive errors that a
                 controller faces that are expected to be fixed automatically over
                 time (like service outages), but instead indicate that something is
@@ -355,7 +351,6 @@
                 of terminal errors would be invalid combinations of settings in the
                 spec, values that are unsupported by the machine controller, or the
                 responsible machine controller itself being critically misconfigured.
-
 
                 Any transient errors that occur during the reconciliation of Machines
                 can be added as events to the MachineSet object and/or logged in the
@@ -366,7 +361,7 @@
               format: int32
               type: integer
             observedGeneration:
-              description: ObservedGeneration reflects the generation of the most recently observed MachineSet.
+              description: observedGeneration reflects the generation of the most recently observed MachineSet.
               format: int64
               type: integer
             readyReplicas:
@@ -374,12 +369,12 @@
               format: int32
               type: integer
             replicas:
-              description: Replicas is the most recently observed number of replicas.
+              description: replicas is the most recently observed number of replicas.
               format: int32
               type: integer
             selector:
               description: |-
-                Selector is the same as the label selector but in the string format to avoid introspection
+                selector is the same as the label selector but in the string format to avoid introspection
                 by clients. The string will be in the same format as the query-param syntax.
                 More info about label selectors: http://kubernetes.io/docs/user-guide/labels#label-selectors
               type: string
