--- a/helm/cluster-api/files/core/patches/versions/v1beta1/ipaddresses.ipam.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/ipaddresses.ipam.cluster.x-k8s.io.yaml
@@ -25,10 +25,10 @@
           description: IPAddressSpec is the desired state of an IPAddress.
           properties:
             address:
-              description: Address is the IP address.
+              description: address is the IP address.
               type: string
             claimRef:
-              description: ClaimRef is a reference to the claim this IPAddress was created for.
+              description: claimRef is a reference to the claim this IPAddress was created for.
               properties:
                 name:
                   default: ""
@@ -37,17 +37,15 @@
                     This field is effectively required, but due to backwards compatibility is
                     allowed to be empty. Instances of this type with an empty value here are
                     almost certainly wrong.
-                    TODO: Add other useful fields. apiVersion, kind, uid?
                     More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                    TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.
                   type: string
               type: object
               x-kubernetes-map-type: atomic
             gateway:
-              description: Gateway is the network gateway of the network the address is from.
+              description: gateway is the network gateway of the network the address is from.
               type: string
             poolRef:
-              description: PoolRef is a reference to the pool that this IPAddress was created from.
+              description: poolRef is a reference to the pool that this IPAddress was created from.
               properties:
                 apiGroup:
                   description: |-
@@ -67,7 +65,7 @@
               type: object
               x-kubernetes-map-type: atomic
             prefix:
-              description: Prefix is the prefix of the address.
+              description: prefix is the prefix of the address.
               type: integer
           required:
             - address
