--- a/helm/cluster-api/files/core/patches/versions/v1beta1/machinehealthchecks.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/machinehealthchecks.cluster.x-k8s.io.yaml
@@ -25,7 +25,7 @@
           description: Specification of machine health check policy
           properties:
             clusterName:
-              description: ClusterName is the name of the Cluster this object belongs to.
+              description: clusterName is the name of the Cluster this object belongs to.
               minLength: 1
               type: string
             maxUnhealthy:
@@ -36,15 +36,13 @@
                 Any further remediation is only allowed if at most "MaxUnhealthy" machines selected by
                 "selector" are not healthy.
 
-
                 Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/issues/10722 for more details.
               x-kubernetes-int-or-string: true
             nodeStartupTimeout:
               description: |-
-                NodeStartupTimeout allows to set the maximum time for MachineHealthCheck
+                nodeStartupTimeout allows to set the maximum time for MachineHealthCheck
                 to consider a Machine unhealthy if a corresponding Node isn't associated
                 through a `Spec.ProviderID` field.
-
 
                 The duration set in this field is compared to the greatest of:
                 - Cluster's infrastructure ready condition timestamp (if and when available)
@@ -52,15 +50,13 @@
                 - Machine's infrastructure ready condition timestamp (if and when available)
                 - Machine's metadata creation timestamp
 
-
                 Defaults to 10 minutes.
                 If you wish to disable this feature, set the value explicitly to 0.
               type: string
             remediationTemplate:
               description: |-
-                RemediationTemplate is a reference to a remediation template
+                remediationTemplate is a reference to a remediation template
                 provided by an infrastructure provider.
-
 
                 This field is completely optional, when filled, the MachineHealthCheck controller
                 creates a new object from the template referenced and hands off remediation of the machine to
@@ -78,7 +74,6 @@
                     the event) or if no container name is specified "spec.containers[2]" (container with
                     index 2 in this pod). This syntax is chosen only to have some well-defined way of
                     referencing a part of an object.
-                    TODO: this design is not final and this field is subject to change in the future.
                   type: string
                 kind:
                   description: |-
@@ -153,7 +148,7 @@
               x-kubernetes-map-type: atomic
             unhealthyConditions:
               description: |-
-                UnhealthyConditions contains a list of the conditions that determine
+                unhealthyConditions contains a list of the conditions that determine
                 whether a node is considered unhealthy.  The conditions are combined in a
                 logical OR, i.e. if any of the conditions is met, the node is unhealthy.
               items:
@@ -184,7 +179,6 @@
                 (a) there are at least 3 unhealthy machines (and)
                 (b) there are at most 5 unhealthy machines
 
-
                 Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/issues/10722 for more details.
               pattern: ^\[[0-9]+-[0-9]+\]$
               type: string
@@ -196,7 +190,7 @@
           description: Most recently observed status of MachineHealthCheck resource
           properties:
             conditions:
-              description: Conditions defines current service state of the MachineHealthCheck.
+              description: conditions defines current service state of the MachineHealthCheck.
               items:
                 description: Condition defines an observation of a Cluster API resource operational state.
                 properties:
@@ -216,20 +210,20 @@
                     description: |-
                       The reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
-                      This field may not be empty.
+                      This field may be empty.
                     type: string
                   severity:
                     description: |-
-                      Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                      severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
                     type: string
                   status:
-                    description: Status of the condition, one of True, False, Unknown.
+                    description: status of the condition, one of True, False, Unknown.
                     type: string
                   type:
                     description: |-
-                      Type of condition in CamelCase or in foo.example.com/CamelCase.
+                      type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
                     type: string
@@ -250,20 +244,86 @@
               minimum: 0
               type: integer
             observedGeneration:
-              description: ObservedGeneration is the latest generation observed by the controller.
+              description: observedGeneration is the latest generation observed by the controller.
               format: int64
               type: integer
             remediationsAllowed:
               description: |-
-                RemediationsAllowed is the number of further remediations allowed by this machine health check before
+                remediationsAllowed is the number of further remediations allowed by this machine health check before
                 maxUnhealthy short circuiting will be applied
               format: int32
               minimum: 0
               type: integer
             targets:
-              description: Targets shows the current list of machines the machine health check is watching
+              description: targets shows the current list of machines the machine health check is watching
               items:
                 type: string
               type: array
+            v1beta2:
+              description: v1beta2 groups all the fields that will be added or modified in MachineHealthCheck's status with the V1Beta2 version.
+              properties:
+                conditions:
+                  description: |-
+                    conditions represents the observations of a MachineHealthCheck's current state.
+                    Known condition types are RemediationAllowed, Paused.
+                  items:
+                    description: Condition contains details for one aspect of the current state of this API Resource.
+                    properties:
+                      lastTransitionTime:
+                        description: |-
+                          lastTransitionTime is the last time the condition transitioned from one status to another.
+                          This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+                        format: date-time
+                        type: string
+                      message:
+                        description: |-
+                          message is a human readable message indicating details about the transition.
+                          This may be an empty string.
+                        maxLength: 32768
+                        type: string
+                      observedGeneration:
+                        description: |-
+                          observedGeneration represents the .metadata.generation that the condition was set based upon.
+                          For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                          with respect to the current state of the instance.
+                        format: int64
+                        minimum: 0
+                        type: integer
+                      reason:
+                        description: |-
+                          reason contains a programmatic identifier indicating the reason for the condition's last transition.
+                          Producers of specific condition types may define expected values and meanings for this field,
+                          and whether the values are considered a guaranteed API.
+                          The value should be a CamelCase string.
+                          This field may not be empty.
+                        maxLength: 1024
+                        minLength: 1
+                        pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                        type: string
+                      status:
+                        description: status of the condition, one of True, False, Unknown.
+                        enum:
+                          - "True"
+                          - "False"
+                          - Unknown
+                        type: string
+                      type:
+                        description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                        maxLength: 316
+                        pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                        type: string
+                    required:
+                      - lastTransitionTime
+                      - message
+                      - reason
+                      - status
+                      - type
+                    type: object
+                  maxItems: 32
+                  type: array
+                  x-kubernetes-list-map-keys:
+                    - type
+                  x-kubernetes-list-type: map
+              type: object
           type: object
       type: object
