--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/clusterclasses.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/clusterclasses.cluster.x-k8s.io.yaml
@@ -25,7 +25,7 @@
         metadata:
           type: object
         spec:
-          description: ClusterClassSpec describes the desired state of the ClusterClass.
+          description: spec is the desired state of ClusterClass.
           properties:
             controlPlane:
               description: |-
@@ -34,7 +34,7 @@
               properties:
                 machineInfrastructure:
                   description: |-
-                    MachineTemplate defines the metadata and infrastructure information
+                    machineInfrastructure defines the metadata and infrastructure information
                     for control plane machines.
 
                     This field is supported if and only if the control plane provider template
@@ -109,7 +109,7 @@
                       additionalProperties:
                         type: string
                       description: |-
-                        Map of string keys and values that can be used to organize and categorize
+                        labels is a map of string keys and values that can be used to organize and categorize
                         (scope and select) objects. May match selectors of replication controllers
                         and services.
                         More info: http://kubernetes.io/docs/user-guide/labels
@@ -369,7 +369,7 @@
                                 additionalProperties:
                                   type: string
                                 description: |-
-                                  Map of string keys and values that can be used to organize and categorize
+                                  labels is a map of string keys and values that can be used to organize and categorize
                                   (scope and select) objects. May match selectors of replication controllers
                                   and services.
                                   More info: http://kubernetes.io/docs/user-guide/labels
