--- a/helm/cluster-api/files/bootstrap/patches/versions/v1alpha3/kubeadmconfigs.bootstrap.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/bootstrap/patches/versions/v1alpha3/kubeadmconfigs.bootstrap.cluster.x-k8s.io.yaml
@@ -25,9 +25,7 @@
         metadata:
           type: object
         spec:
-          description: |-
-            KubeadmConfigSpec defines the desired state of KubeadmConfig.
-            Either ClusterConfiguration and InitConfiguration should be defined or the JoinConfiguration should be defined.
+          description: spec is the desired state of KubeadmConfig.
           properties:
             clusterConfiguration:
               description: clusterConfiguration along with InitConfiguration are the configurations necessary for the init command
@@ -856,7 +854,7 @@
               type: integer
           type: object
         status:
-          description: KubeadmConfigStatus defines the observed state of KubeadmConfig.
+          description: status is the observed state of KubeadmConfig.
           properties:
             bootstrapData:
               description: |-
@@ -872,19 +870,19 @@
                 properties:
                   lastTransitionTime:
                     description: |-
-                      Last time the condition transitioned from one status to another.
+                      lastTransitionTime is the last time the condition transitioned from one status to another.
                       This should be when the underlying condition changed. If that is not known, then using the time when
                       the API field changed is acceptable.
                     format: date-time
                     type: string
                   message:
                     description: |-
-                      A human readable message indicating details about the transition.
+                      message is a human readable message indicating details about the transition.
                       This field may be empty.
                     type: string
                   reason:
                     description: |-
-                      The reason for the condition's last transition in CamelCase.
+                      reason is the reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
                       This field may not be empty.
                     type: string
