--- a/helm/cluster-api/files/bootstrap/patches/versions/v1alpha3/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/bootstrap/patches/versions/v1alpha3/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
@@ -25,15 +25,13 @@
         metadata:
           type: object
         spec:
-          description: KubeadmConfigTemplateSpec defines the desired state of KubeadmConfigTemplate.
+          description: spec is the desired state of KubeadmConfigTemplate.
           properties:
             template:
-              description: KubeadmConfigTemplateResource defines the Template structure.
+              description: template defines the desired state of KubeadmConfigTemplate.
               properties:
                 spec:
-                  description: |-
-                    KubeadmConfigSpec defines the desired state of KubeadmConfig.
-                    Either ClusterConfiguration and InitConfiguration should be defined or the JoinConfiguration should be defined.
+                  description: spec is the desired state of KubeadmConfig.
                   properties:
                     clusterConfiguration:
                       description: clusterConfiguration along with InitConfiguration are the configurations necessary for the init command
