--- a/helm/cluster-api/files/controlplane/patches/versions/v1alpha4/kubeadmcontrolplanetemplates.controlplane.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/controlplane/patches/versions/v1alpha4/kubeadmcontrolplanetemplates.controlplane.cluster.x-k8s.io.yaml
@@ -25,13 +25,13 @@
         metadata:
           type: object
         spec:
-          description: KubeadmControlPlaneTemplateSpec defines the desired state of KubeadmControlPlaneTemplate.
+          description: spec is the desired state of KubeadmControlPlaneTemplate.
           properties:
             template:
-              description: KubeadmControlPlaneTemplateResource describes the data needed to create a KubeadmControlPlane from a template.
+              description: template defines the desired state of KubeadmControlPlaneTemplate.
               properties:
                 spec:
-                  description: KubeadmControlPlaneSpec defines the desired state of KubeadmControlPlane.
+                  description: spec is the desired state of KubeadmControlPlane.
                   properties:
                     kubeadmConfigSpec:
                       description: |-
@@ -101,7 +101,7 @@
                                 NB: if not provided, this will default to `/etc/kubernetes/pki`
                               type: string
                             clusterName:
-                              description: The cluster name
+                              description: clusterName is the cluster name
                               type: string
                             controlPlaneEndpoint:
                               description: |-
@@ -913,7 +913,7 @@
                           x-kubernetes-map-type: atomic
                         metadata:
                           description: |-
-                            Standard object's metadata.
+                            metadata is the standard object's metadata.
                             More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
                           properties:
                             annotations:
@@ -929,7 +929,7 @@
                               additionalProperties:
                                 type: string
                               description: |-
-                                Map of string keys and values that can be used to organize and categorize
+                                labels is a map of string keys and values that can be used to organize and categorize
                                 (scope and select) objects. May match selectors of replication controllers
                                 and services.
                                 More info: http://kubernetes.io/docs/user-guide/labels
@@ -946,7 +946,7 @@
                       type: object
                     replicas:
                       description: |-
-                        Number of desired machines. Defaults to 1. When stacked etcd is used only
+                        replicas is the number of desired machines. Defaults to 1. When stacked etcd is used only
                         odd numbers are permitted, as per [etcd best practice](https://etcd.io/docs/v3.3.12/faq/#why-an-odd-number-of-cluster-members).
                         This is a pointer to distinguish between explicit zero and not specified.
                       format: int32
@@ -964,12 +964,12 @@
                           maxSurge: 1
                         type: RollingUpdate
                       description: |-
-                        The RolloutStrategy to use to replace control plane machines with
+                        rolloutStrategy is the RolloutStrategy to use to replace control plane machines with
                         new ones.
                       properties:
                         rollingUpdate:
                           description: |-
-                            Rolling update config params. Present only if
+                            rollingUpdate is the rolling update config params. Present only if
                             RolloutStrategyType = RollingUpdate.
                           properties:
                             maxSurge:
@@ -977,7 +977,7 @@
                                 - type: integer
                                 - type: string
                               description: |-
-                                The maximum number of control planes that can be scheduled above or under the
+                                maxSurge is the maximum number of control planes that can be scheduled above or under the
                                 desired number of control planes.
                                 Value can be an absolute number 1 or 0.
                                 Defaults to 1.
