--- a/helm/cluster-api/files/core/patches/versions/v1alpha1/extensionconfigs.runtime.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha1/extensionconfigs.runtime.cluster.x-k8s.io.yaml
@@ -22,7 +22,7 @@
         metadata:
           type: object
         spec:
-          description: ExtensionConfigSpec is the desired state of the ExtensionConfig
+          description: spec is the desired state of the ExtensionConfig.
           properties:
             clientConfig:
               description: clientConfig defines how to communicate with the Extension server.
@@ -30,6 +30,8 @@
                 caBundle:
                   description: caBundle is a PEM encoded CA bundle which will be used to validate the Extension server's server certificate.
                   format: byte
+                  maxLength: 51200
+                  minLength: 1
                   type: string
                 service:
                   description: |-
@@ -40,14 +42,20 @@
                   properties:
                     name:
                       description: name is the name of the service.
+                      maxLength: 63
+                      minLength: 1
                       type: string
                     namespace:
                       description: namespace is the namespace of the service.
+                      maxLength: 63
+                      minLength: 1
                       type: string
                     path:
                       description: |-
                         path is an optional URL path and if present may be any string permissible in
                         a URL. If a path is set it will be used as prefix to the hook-specific path.
+                      maxLength: 512
+                      minLength: 1
                       type: string
                     port:
                       description: |-
@@ -77,6 +85,8 @@
                     Attempting to use a user or basic auth e.g. "user:password@" is not
                     allowed. Fragments ("#...") and query parameters ("?...") are not
                     allowed either.
+                  maxLength: 512
+                  minLength: 1
                   type: string
               type: object
             namespaceSelector:
@@ -138,7 +148,7 @@
             - clientConfig
           type: object
         status:
-          description: ExtensionConfigStatus is the current state of the ExtensionConfig
+          description: status is the current state of the ExtensionConfig
           properties:
             conditions:
               description: conditions define the current service state of the ExtensionConfig.
@@ -147,27 +157,32 @@
                 properties:
                   lastTransitionTime:
                     description: |-
-                      Last time the condition transitioned from one status to another.
+                      lastTransitionTime is the last time the condition transitioned from one status to another.
                       This should be when the underlying condition changed. If that is not known, then using the time when
                       the API field changed is acceptable.
                     format: date-time
                     type: string
                   message:
                     description: |-
-                      A human readable message indicating details about the transition.
+                      message is a human readable message indicating details about the transition.
                       This field may be empty.
+                    maxLength: 10240
+                    minLength: 1
                     type: string
                   reason:
                     description: |-
-                      The reason for the condition's last transition in CamelCase.
+                      reason is the reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
                       This field may be empty.
+                    maxLength: 256
+                    minLength: 1
                     type: string
                   severity:
                     description: |-
                       severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
+                    maxLength: 32
                     type: string
                   status:
                     description: status of the condition, one of True, False, Unknown.
@@ -177,6 +192,8 @@
                       type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
+                    maxLength: 256
+                    minLength: 1
                     type: string
                 required:
                   - lastTransitionTime
@@ -193,18 +210,27 @@
                     description: |-
                       failurePolicy defines how failures in calls to the ExtensionHandler should be handled by a client.
                       Defaults to Fail if not set.
+                    enum:
+                      - Ignore
+                      - Fail
                     type: string
                   name:
                     description: name is the unique name of the ExtensionHandler.
+                    maxLength: 512
+                    minLength: 1
                     type: string
                   requestHook:
                     description: requestHook defines the versioned runtime hook which this ExtensionHandler serves.
                     properties:
                       apiVersion:
                         description: apiVersion is the group and version of the Hook.
+                        maxLength: 512
+                        minLength: 1
                         type: string
                       hook:
                         description: hook is the name of the hook.
+                        maxLength: 256
+                        minLength: 1
                         type: string
                     required:
                       - apiVersion
@@ -220,9 +246,76 @@
                   - name
                   - requestHook
                 type: object
+              maxItems: 512
               type: array
               x-kubernetes-list-map-keys:
                 - name
               x-kubernetes-list-type: map
+            v1beta2:
+              description: v1beta2 groups all the fields that will be added or modified in ExtensionConfig's status with the V1Beta2 version.
+              properties:
+                conditions:
+                  description: |-
+                    conditions represents the observations of a ExtensionConfig's current state.
+                    Known condition types are Discovered, Paused.
+                  items:
+                    description: Condition contains details for one aspect of the current state of this API Resource.
+                    properties:
+                      lastTransitionTime:
+                        description: |-
+                          lastTransitionTime is the last time the condition transitioned from one status to another.
+                          This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+                        format: date-time
+                        type: string
+                      message:
+                        description: |-
+                          message is a human readable message indicating details about the transition.
+                          This may be an empty string.
+                        maxLength: 32768
+                        type: string
+                      observedGeneration:
+                        description: |-
+                          observedGeneration represents the .metadata.generation that the condition was set based upon.
+                          For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                          with respect to the current state of the instance.
+                        format: int64
+                        minimum: 0
+                        type: integer
+                      reason:
+                        description: |-
+                          reason contains a programmatic identifier indicating the reason for the condition's last transition.
+                          Producers of specific condition types may define expected values and meanings for this field,
+                          and whether the values are considered a guaranteed API.
+                          The value should be a CamelCase string.
+                          This field may not be empty.
+                        maxLength: 1024
+                        minLength: 1
+                        pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                        type: string
+                      status:
+                        description: status of the condition, one of True, False, Unknown.
+                        enum:
+                          - "True"
+                          - "False"
+                          - Unknown
+                        type: string
+                      type:
+                        description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                        maxLength: 316
+                        pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                        type: string
+                    required:
+                      - lastTransitionTime
+                      - message
+                      - reason
+                      - status
+                      - type
+                    type: object
+                  maxItems: 32
+                  type: array
+                  x-kubernetes-list-map-keys:
+                    - type
+                  x-kubernetes-list-type: map
+              type: object
           type: object
       type: object
