--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/clusterresourcesets.addons.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/clusterresourcesets.addons.cluster.x-k8s.io.yaml
@@ -25,11 +25,11 @@
         metadata:
           type: object
         spec:
-          description: ClusterResourceSetSpec defines the desired state of ClusterResourceSet.
+          description: spec is the desired state of ClusterResourceSet.
           properties:
             clusterSelector:
               description: |-
-                Label selector for Clusters. The Clusters that are
+                clusterSelector is the label selector for Clusters. The Clusters that are
                 selected by this will be the ones affected by this ClusterResourceSet.
                 It must match the Cluster labels. This field is immutable.
               properties:
@@ -103,7 +103,7 @@
             - clusterSelector
           type: object
         status:
-          description: ClusterResourceSetStatus defines the observed state of ClusterResourceSet.
+          description: status is the observed state of ClusterResourceSet.
           properties:
             conditions:
               description: conditions defines current state of the ClusterResourceSet.
@@ -112,19 +112,19 @@
                 properties:
                   lastTransitionTime:
                     description: |-
-                      Last time the condition transitioned from one status to another.
+                      lastTransitionTime is the last time the condition transitioned from one status to another.
                       This should be when the underlying condition changed. If that is not known, then using the time when
                       the API field changed is acceptable.
                     format: date-time
                     type: string
                   message:
                     description: |-
-                      A human readable message indicating details about the transition.
+                      message is a human readable message indicating details about the transition.
                       This field may be empty.
                     type: string
                   reason:
                     description: |-
-                      The reason for the condition's last transition in CamelCase.
+                      reason is the reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
                       This field may not be empty.
                     type: string
