--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/clusters.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/clusters.cluster.x-k8s.io.yaml
@@ -22,10 +22,10 @@
         metadata:
           type: object
         spec:
-          description: ClusterSpec defines the desired state of Cluster.
+          description: spec is the desired state of Cluster.
           properties:
             clusterNetwork:
-              description: Cluster network configuration.
+              description: clusterNetwork is the cluster network configuration.
               properties:
                 apiServerPort:
                   description: |-
@@ -34,9 +34,10 @@
                   format: int32
                   type: integer
                 pods:
-                  description: The network ranges from which Pod networks are allocated.
+                  description: pods is the network ranges from which Pod networks are allocated.
                   properties:
                     cidrBlocks:
+                      description: cidrBlocks is a list of CIDR blocks.
                       items:
                         type: string
                       type: array
@@ -44,12 +45,13 @@
                     - cidrBlocks
                   type: object
                 serviceDomain:
-                  description: Domain name for services.
+                  description: serviceDomain is the domain name for services.
                   type: string
                 services:
-                  description: The network ranges from which service VIPs are allocated.
+                  description: services is the network ranges from which service VIPs are allocated.
                   properties:
                     cidrBlocks:
+                      description: cidrBlocks is a list of CIDR blocks.
                       items:
                         type: string
                       type: array
@@ -61,10 +63,10 @@
               description: controlPlaneEndpoint represents the endpoint used to communicate with the control plane.
               properties:
                 host:
-                  description: The hostname on which the API server is serving.
+                  description: host is the hostname on which the API server is serving.
                   type: string
                 port:
-                  description: The port on which the API server is serving.
+                  description: port is the port on which the API server is serving.
                   format: int32
                   type: integer
               required:
@@ -166,7 +168,7 @@
               type: boolean
           type: object
         status:
-          description: ClusterStatus defines the observed state of Cluster.
+          description: status is the observed state of Cluster.
           properties:
             conditions:
               description: conditions defines current service state of the cluster.
@@ -175,19 +177,19 @@
                 properties:
                   lastTransitionTime:
                     description: |-
-                      Last time the condition transitioned from one status to another.
+                      lastTransitionTime is the last time the condition transitioned from one status to another.
                       This should be when the underlying condition changed. If that is not known, then using the time when
                       the API field changed is acceptable.
                     format: date-time
                     type: string
                   message:
                     description: |-
-                      A human readable message indicating details about the transition.
+                      message is a human readable message indicating details about the transition.
                       This field may be empty.
                     type: string
                   reason:
                     description: |-
-                      The reason for the condition's last transition in CamelCase.
+                      reason is the reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
                       This field may not be empty.
                     type: string
