--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/machinedeployments.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/machinedeployments.cluster.x-k8s.io.yaml
@@ -25,7 +25,7 @@
         metadata:
           type: object
         spec:
-          description: MachineDeploymentSpec defines the desired state of MachineDeployment.
+          description: spec is the desired state of MachineDeployment.
           properties:
             clusterName:
               description: clusterName is the name of the Cluster this object belongs to.
@@ -33,18 +33,18 @@
               type: string
             minReadySeconds:
               description: |-
-                Minimum number of seconds for which a newly created machine should
+                minReadySeconds is the minimum number of seconds for which a newly created machine should
                 be ready.
                 Defaults to 0 (machine will be considered available as soon as it
                 is ready)
               format: int32
               type: integer
             paused:
-              description: Indicates that the deployment is paused.
+              description: paused indicates that the deployment is paused.
               type: boolean
             progressDeadlineSeconds:
               description: |-
-                The maximum time in seconds for a deployment to make progress before it
+                progressDeadlineSeconds is the maximum time in seconds for a deployment to make progress before it
                 is considered to be failed. The deployment controller will continue to
                 process failed deployments and a condition with a ProgressDeadlineExceeded
                 reason will be surfaced in the deployment status. Note that progress will
@@ -53,20 +53,20 @@
               type: integer
             replicas:
               description: |-
-                Number of desired machines. Defaults to 1.
+                replicas is the number of desired machines. Defaults to 1.
                 This is a pointer to distinguish between explicit zero and not specified.
               format: int32
               type: integer
             revisionHistoryLimit:
               description: |-
-                The number of old MachineSets to retain to allow rollback.
+                revisionHistoryLimit is the number of old MachineSets to retain to allow rollback.
                 This is a pointer to distinguish between explicit zero and not specified.
                 Defaults to 1.
               format: int32
               type: integer
             selector:
               description: |-
-                Label selector for machines. Existing MachineSets whose machines are
+                selector is the label selector for machines. Existing MachineSets whose machines are
                 selected by this will be the ones affected by this deployment.
                 It must match the machine template's labels.
               properties:
@@ -113,12 +113,12 @@
               x-kubernetes-map-type: atomic
             strategy:
               description: |-
-                The deployment strategy to use to replace existing machines with
+                strategy is the deployment strategy to use to replace existing machines with
                 new ones.
               properties:
                 rollingUpdate:
                   description: |-
-                    Rolling update config params. Present only if
+                    rollingUpdate is the rolling update config params. Present only if
                     MachineDeploymentStrategyType = RollingUpdate.
                   properties:
                     maxSurge:
@@ -126,7 +126,7 @@
                         - type: integer
                         - type: string
                       description: |-
-                        The maximum number of machines that can be scheduled above the
+                        maxSurge is the maximum number of machines that can be scheduled above the
                         desired number of machines.
                         Value can be an absolute number (ex: 5) or a percentage of
                         desired machines (ex: 10%).
@@ -145,7 +145,7 @@
                         - type: integer
                         - type: string
                       description: |-
-                        The maximum number of machines that can be unavailable during the update.
+                        maxUnavailable is the maximum number of machines that can be unavailable during the update.
                         Value can be an absolute number (ex: 5) or a percentage of desired
                         machines (ex: 10%).
                         Absolute number is calculated from percentage by rounding down.
@@ -171,7 +171,7 @@
               properties:
                 metadata:
                   description: |-
-                    Standard object's metadata.
+                    metadata is the standard object's metadata.
                     More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
                   properties:
                     annotations:
@@ -207,7 +207,7 @@
                       additionalProperties:
                         type: string
                       description: |-
-                        Map of string keys and values that can be used to organize and categorize
+                        labels is a map of string keys and values that can be used to organize and categorize
                         (scope and select) objects. May match selectors of replication controllers
                         and services.
                         More info: http://kubernetes.io/docs/user-guide/labels
@@ -238,7 +238,7 @@
                       type: string
                     ownerReferences:
                       description: |-
-                        List of objects depended by this object. If ALL objects in the list have
+                        ownerReferences is the list of objects depended by this object. If ALL objects in the list have
                         been deleted, this object will be garbage collected. If this object is managed by a controller,
                         then an entry in this list will point to this controller, with the controller field set to true.
                         There cannot be more than one managing controller.
@@ -293,7 +293,7 @@
                   type: object
                 spec:
                   description: |-
-                    Specification of the desired behavior of the machine.
+                    spec is the specification of the desired behavior of the machine.
                     More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#spec-and-status
                   properties:
                     bootstrap:
@@ -451,28 +451,28 @@
             - template
           type: object
         status:
-          description: MachineDeploymentStatus defines the observed state of MachineDeployment.
+          description: status is the observed state of MachineDeployment.
           properties:
             availableReplicas:
               description: |-
-                Total number of available machines (ready for at least minReadySeconds)
+                availableReplicas is the total number of available machines (ready for at least minReadySeconds)
                 targeted by this deployment.
               format: int32
               type: integer
             observedGeneration:
-              description: The generation observed by the deployment controller.
+              description: observedGeneration is the generation observed by the deployment controller.
               format: int64
               type: integer
             phase:
               description: phase represents the current phase of a MachineDeployment (ScalingUp, ScalingDown, Running, Failed, or Unknown).
               type: string
             readyReplicas:
-              description: Total number of ready machines targeted by this deployment.
+              description: readyReplicas is the total number of ready machines targeted by this deployment.
               format: int32
               type: integer
             replicas:
               description: |-
-                Total number of non-terminated machines targeted by this deployment
+                replicas is the total number of non-terminated machines targeted by this deployment
                 (their labels match the selector).
               format: int32
               type: integer
@@ -484,7 +484,7 @@
               type: string
             unavailableReplicas:
               description: |-
-                Total number of unavailable machines targeted by this deployment.
+                unavailableReplicas is the total number of unavailable machines targeted by this deployment.
                 This is the total number of machines that are still required for
                 the deployment to have 100% available capacity. They may either
                 be machines that are running but not yet available or machines
@@ -493,7 +493,7 @@
               type: integer
             updatedReplicas:
               description: |-
-                Total number of non-terminated machines targeted by this deployment
+                updatedReplicas is the total number of non-terminated machines targeted by this deployment
                 that have the desired template spec.
               format: int32
               type: integer
