--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/machinepools.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/machinepools.cluster.x-k8s.io.yaml
@@ -25,7 +25,7 @@
         metadata:
           type: object
         spec:
-          description: MachinePoolSpec defines the desired state of MachinePool.
+          description: spec is the desired state of MachinePool.
           properties:
             clusterName:
               description: clusterName is the name of the Cluster this object belongs to.
@@ -38,7 +38,7 @@
               type: array
             minReadySeconds:
               description: |-
-                Minimum number of seconds for which a newly created machine instances should
+                minReadySeconds is the minimum number of seconds for which a newly created machine instances should
                 be ready.
                 Defaults to 0 (machine instance will be considered available as soon as it
                 is ready)
@@ -53,18 +53,18 @@
               type: array
             replicas:
               description: |-
-                Number of desired machines. Defaults to 1.
+                replicas is the number of desired machines. Defaults to 1.
                 This is a pointer to distinguish between explicit zero and not specified.
               format: int32
               type: integer
             strategy:
               description: |-
-                The deployment strategy to use to replace existing machine instances with
+                strategy is the deployment strategy to use to replace existing machine instances with
                 new ones.
               properties:
                 rollingUpdate:
                   description: |-
-                    Rolling update config params. Present only if
+                    rollingUpdate is the rolling update config params. Present only if
                     MachineDeploymentStrategyType = RollingUpdate.
                   properties:
                     maxSurge:
@@ -72,7 +72,7 @@
                         - type: integer
                         - type: string
                       description: |-
-                        The maximum number of machines that can be scheduled above the
+                        maxSurge is the maximum number of machines that can be scheduled above the
                         desired number of machines.
                         Value can be an absolute number (ex: 5) or a percentage of
                         desired machines (ex: 10%).
@@ -91,7 +91,7 @@
                         - type: integer
                         - type: string
                       description: |-
-                        The maximum number of machines that can be unavailable during the update.
+                        maxUnavailable is the maximum number of machines that can be unavailable during the update.
                         Value can be an absolute number (ex: 5) or a percentage of desired
                         machines (ex: 10%).
                         Absolute number is calculated from percentage by rounding down.
@@ -117,7 +117,7 @@
               properties:
                 metadata:
                   description: |-
-                    Standard object's metadata.
+                    metadata is the standard object's metadata.
                     More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
                   properties:
                     annotations:
@@ -153,7 +153,7 @@
                       additionalProperties:
                         type: string
                       description: |-
-                        Map of string keys and values that can be used to organize and categorize
+                        labels is a map of string keys and values that can be used to organize and categorize
                         (scope and select) objects. May match selectors of replication controllers
                         and services.
                         More info: http://kubernetes.io/docs/user-guide/labels
@@ -184,7 +184,7 @@
                       type: string
                     ownerReferences:
                       description: |-
-                        List of objects depended by this object. If ALL objects in the list have
+                        ownerReferences is the list of objects depended by this object. If ALL objects in the list have
                         been deleted, this object will be garbage collected. If this object is managed by a controller,
                         then an entry in this list will point to this controller, with the controller field set to true.
                         There cannot be more than one managing controller.
@@ -239,7 +239,7 @@
                   type: object
                 spec:
                   description: |-
-                    Specification of the desired behavior of the machine.
+                    spec is the specification of the desired behavior of the machine.
                     More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#spec-and-status
                   properties:
                     bootstrap:
@@ -396,10 +396,10 @@
             - template
           type: object
         status:
-          description: MachinePoolStatus defines the observed state of MachinePool.
+          description: status is the observed state of MachinePool.
           properties:
             availableReplicas:
-              description: The number of available replicas (ready for at least minReadySeconds) for this MachinePool.
+              description: availableReplicas is the number of available replicas (ready for at least minReadySeconds) for this MachinePool.
               format: int32
               type: integer
             bootstrapReady:
@@ -412,19 +412,19 @@
                 properties:
                   lastTransitionTime:
                     description: |-
-                      Last time the condition transitioned from one status to another.
+                      lastTransitionTime is the last time the condition transitioned from one status to another.
                       This should be when the underlying condition changed. If that is not known, then using the time when
                       the API field changed is acceptable.
                     format: date-time
                     type: string
                   message:
                     description: |-
-                      A human readable message indicating details about the transition.
+                      message is a human readable message indicating details about the transition.
                       This field may be empty.
                     type: string
                   reason:
                     description: |-
-                      The reason for the condition's last transition in CamelCase.
+                      reason is the reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
                       This field may not be empty.
                     type: string
@@ -517,7 +517,7 @@
                 E.g. Pending, Running, Terminating, Failed etc.
               type: string
             readyReplicas:
-              description: The number of ready replicas for this MachinePool. A machine is considered ready when the node has been created and is "Ready".
+              description: readyReplicas is the number of ready replicas for this MachinePool. A machine is considered ready when the node has been created and is "Ready".
               format: int32
               type: integer
             replicas:
@@ -526,7 +526,7 @@
               type: integer
             unavailableReplicas:
               description: |-
-                Total number of unavailable machine instances targeted by this machine pool.
+                unavailableReplicas is the total number of unavailable machine instances targeted by this machine pool.
                 This is the total number of machine instances that are still required for
                 the machine pool to have 100% available capacity. They may either
                 be machine instances that are running but not yet available or machine instances
