--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/machines.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/machines.cluster.x-k8s.io.yaml
@@ -25,7 +25,7 @@
         metadata:
           type: object
         spec:
-          description: MachineSpec defines the desired state of Machine.
+          description: spec is the desired state of Machine.
           properties:
             bootstrap:
               description: |-
@@ -176,7 +176,7 @@
             - infrastructureRef
           type: object
         status:
-          description: MachineStatus defines the observed state of Machine.
+          description: status is the observed state of Machine.
           properties:
             addresses:
               description: |-
@@ -186,10 +186,10 @@
                 description: MachineAddress contains information for the node's address.
                 properties:
                   address:
-                    description: The machine address.
+                    description: address is the machine address.
                     type: string
                   type:
-                    description: Machine address type, one of Hostname, ExternalIP or InternalIP.
+                    description: type is the machine address type, one of Hostname, ExternalIP or InternalIP.
                     type: string
                 required:
                   - address
@@ -206,19 +206,19 @@
                 properties:
                   lastTransitionTime:
                     description: |-
-                      Last time the condition transitioned from one status to another.
+                      lastTransitionTime is the last time the condition transitioned from one status to another.
                       This should be when the underlying condition changed. If that is not known, then using the time when
                       the API field changed is acceptable.
                     format: date-time
                     type: string
                   message:
                     description: |-
-                      A human readable message indicating details about the transition.
+                      message is a human readable message indicating details about the transition.
                       This field may be empty.
                     type: string
                   reason:
                     description: |-
-                      The reason for the condition's last transition in CamelCase.
+                      reason is the reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
                       This field may not be empty.
                     type: string
