--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/machinesets.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/machinesets.cluster.x-k8s.io.yaml
@@ -25,7 +25,7 @@
         metadata:
           type: object
         spec:
-          description: MachineSetSpec defines the desired state of MachineSet.
+          description: spec is the desired state of MachineSet.
           properties:
             clusterName:
               description: clusterName is the name of the Cluster this object belongs to.
@@ -109,7 +109,7 @@
               properties:
                 metadata:
                   description: |-
-                    Standard object's metadata.
+                    metadata is the standard object's metadata.
                     More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
                   properties:
                     annotations:
@@ -145,7 +145,7 @@
                       additionalProperties:
                         type: string
                       description: |-
-                        Map of string keys and values that can be used to organize and categorize
+                        labels is a map of string keys and values that can be used to organize and categorize
                         (scope and select) objects. May match selectors of replication controllers
                         and services.
                         More info: http://kubernetes.io/docs/user-guide/labels
@@ -176,7 +176,7 @@
                       type: string
                     ownerReferences:
                       description: |-
-                        List of objects depended by this object. If ALL objects in the list have
+                        ownerReferences is the list of objects depended by this object. If ALL objects in the list have
                         been deleted, this object will be garbage collected. If this object is managed by a controller,
                         then an entry in this list will point to this controller, with the controller field set to true.
                         There cannot be more than one managing controller.
@@ -231,7 +231,7 @@
                   type: object
                 spec:
                   description: |-
-                    Specification of the desired behavior of the machine.
+                    spec is the specification of the desired behavior of the machine.
                     More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#spec-and-status
                   properties:
                     bootstrap:
@@ -388,16 +388,24 @@
             - selector
           type: object
         status:
-          description: MachineSetStatus defines the observed state of MachineSet.
+          description: status is the observed state of MachineSet.
           properties:
             availableReplicas:
-              description: The number of available replicas (ready for at least minReadySeconds) for this MachineSet.
+              description: availableReplicas is the number of available replicas (ready for at least minReadySeconds) for this MachineSet.
               format: int32
               type: integer
             failureMessage:
+              description: |-
+                failureMessage will be set in the event that there is a terminal problem
+                reconciling the Machine and will contain a more verbose string suitable
+                for logging and human consumption.
               type: string
             failureReason:
               description: |-
+                failureReason will be set in the event that there is a terminal problem
+                reconciling the Machine and will contain a succinct value suitable
+                for machine interpretation.
+
                 In the event that there is a terminal problem reconciling the
                 replicas, both FailureReason and FailureMessage will be set. FailureReason
                 will be populated with a succinct value suitable for machine
@@ -418,7 +426,7 @@
                 controller's output.
               type: string
             fullyLabeledReplicas:
-              description: The number of replicas that have labels matching the labels of the machine template of the MachineSet.
+              description: fullyLabeledReplicas is the number of replicas that have labels matching the labels of the machine template of the MachineSet.
               format: int32
               type: integer
             observedGeneration:
@@ -426,7 +434,7 @@
               format: int64
               type: integer
             readyReplicas:
-              description: The number of ready replicas for this MachineSet. A machine is considered ready when the node has been created and is "Ready".
+              description: readyReplicas is the number of ready replicas for this MachineSet. A machine is considered ready when the node has been created and is "Ready".
               format: int32
               type: integer
             replicas:
