--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/clusterresourcesetbindings.addons.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/clusterresourcesetbindings.addons.cluster.x-k8s.io.yaml
@@ -25,7 +25,7 @@
         metadata:
           type: object
         spec:
-          description: ClusterResourceSetBindingSpec defines the desired state of ClusterResourceSetBinding.
+          description: spec is the desired state of ClusterResourceSetBinding.
           properties:
             bindings:
               description: bindings is a list of ClusterResourceSets and their resources.
