--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/machinehealthchecks.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/machinehealthchecks.cluster.x-k8s.io.yaml
@@ -25,7 +25,7 @@
         metadata:
           type: object
         spec:
-          description: Specification of machine health check policy
+          description: spec is the specification of machine health check policy
           properties:
             clusterName:
               description: clusterName is the name of the Cluster this object belongs to.
@@ -36,13 +36,14 @@
                 - type: integer
                 - type: string
               description: |-
-                Any further remediation is only allowed if at most "MaxUnhealthy" machines selected by
+                maxUnhealthy specifies the maximum number of unhealthy machines allowed.
+                Any further remediation is only allowed if at most "maxUnhealthy" machines selected by
                 "selector" are not healthy.
               x-kubernetes-int-or-string: true
             nodeStartupTimeout:
               description: |-
-                Machines older than this duration without a node will be considered to have
-                failed and will be remediated.
+                nodeStartupTimeout is the duration after which machines without a node will be considered to
+                have failed and will be remediated.
                 If not set, this value is defaulted to 10 minutes.
                 If you wish to disable this feature, set the value explicitly to 0.
               type: string
@@ -96,7 +97,7 @@
               type: object
               x-kubernetes-map-type: atomic
             selector:
-              description: Label selector to match machines whose health will be exercised
+              description: selector is the label selector to match machines whose health will be exercised
               properties:
                 matchExpressions:
                   description: matchExpressions is a list of label selector requirements. The requirements are ANDed.
@@ -151,11 +152,18 @@
                   status for at least the timeout value, a node is considered unhealthy.
                 properties:
                   status:
+                    description: status of the condition, one of True, False, Unknown.
                     minLength: 1
                     type: string
                   timeout:
+                    description: |-
+                      timeout is the duration that a node must be in a given status for,
+                      after which the node is considered unhealthy.
+                      For example, with a value of "1h", the node must match the status
+                      for at least 1 hour before being considered unhealthy.
                     type: string
                   type:
+                    description: type of Node condition
                     minLength: 1
                     type: string
                 required:
@@ -167,8 +175,9 @@
               type: array
             unhealthyRange:
               description: |-
+                unhealthyRange specifies the range of unhealthy machines allowed.
                 Any further remediation is only allowed if the number of machines selected by "selector" as not healthy
-                is within the range of "UnhealthyRange". Takes precedence over MaxUnhealthy.
+                is within the range of "unhealthyRange". Takes precedence over maxUnhealthy.
                 Eg. "[3-5]" - This means that remediation will be allowed only when:
                 (a) there are at least 3 unhealthy machines (and)
                 (b) there are at most 5 unhealthy machines
@@ -180,7 +189,7 @@
             - unhealthyConditions
           type: object
         status:
-          description: Most recently observed status of MachineHealthCheck resource
+          description: status is the most recently observed status of MachineHealthCheck resource
           properties:
             conditions:
               description: conditions defines current service state of the MachineHealthCheck.
@@ -189,19 +198,19 @@
                 properties:
                   lastTransitionTime:
                     description: |-
-                      Last time the condition transitioned from one status to another.
+                      lastTransitionTime is the last time the condition transitioned from one status to another.
                       This should be when the underlying condition changed. If that is not known, then using the time when
                       the API field changed is acceptable.
                     format: date-time
                     type: string
                   message:
                     description: |-
-                      A human readable message indicating details about the transition.
+                      message is a human readable message indicating details about the transition.
                       This field may be empty.
                     type: string
                   reason:
                     description: |-
-                      The reason for the condition's last transition in CamelCase.
+                      reason is the reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
                       This field may not be empty.
                     type: string
@@ -226,12 +235,12 @@
                 type: object
               type: array
             currentHealthy:
-              description: total number of healthy machines counted by this machine health check
+              description: currentHealthy is the total number of healthy machines counted by this machine health check
               format: int32
               minimum: 0
               type: integer
             expectedMachines:
-              description: total number of machines counted by this machine health check
+              description: expectedMachines is the total number of machines counted by this machine health check
               format: int32
               minimum: 0
               type: integer
