--- a/helm/cluster-api/files/core/patches/versions/v1beta1/ipaddresses.ipam.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/ipaddresses.ipam.cluster.x-k8s.io.yaml
@@ -22,10 +22,12 @@
         metadata:
           type: object
         spec:
-          description: IPAddressSpec is the desired state of an IPAddress.
+          description: spec is the desired state of IPAddress.
           properties:
             address:
               description: address is the IP address.
+              maxLength: 39
+              minLength: 1
               type: string
             claimRef:
               description: claimRef is a reference to the claim this IPAddress was created for.
@@ -43,6 +45,8 @@
               x-kubernetes-map-type: atomic
             gateway:
               description: gateway is the network gateway of the network the address is from.
+              maxLength: 39
+              minLength: 1
               type: string
             poolRef:
               description: poolRef is a reference to the pool that this IPAddress was created from.
