--- a/helm/cluster-api/files/core/patches/versions/v1beta1/machinesets.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/machinesets.cluster.x-k8s.io.yaml
@@ -22,10 +22,11 @@
         metadata:
           type: object
         spec:
-          description: MachineSetSpec defines the desired state of MachineSet.
+          description: spec is the desired state of MachineSet.
           properties:
             clusterName:
               description: clusterName is the name of the Cluster this object belongs to.
+              maxLength: 63
               minLength: 1
               type: string
             deletePolicy:
@@ -61,6 +62,7 @@
                     without vowels, of length 5. This variable is required part of the
                     template. If not provided, validation will fail.
                   maxLength: 256
+                  minLength: 1
                   type: string
               type: object
             minReadySeconds:
@@ -146,7 +148,7 @@
               properties:
                 metadata:
                   description: |-
-                    Standard object's metadata.
+                    metadata is the standard object's metadata.
                     More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
                   properties:
                     annotations:
@@ -162,7 +164,7 @@
                       additionalProperties:
                         type: string
                       description: |-
-                        Map of string keys and values that can be used to organize and categorize
+                        labels is a map of string keys and values that can be used to organize and categorize
                         (scope and select) objects. May match selectors of replication controllers
                         and services.
                         More info: http://kubernetes.io/docs/user-guide/labels
@@ -170,7 +172,7 @@
                   type: object
                 spec:
                   description: |-
-                    Specification of the desired behavior of the machine.
+                    spec is the specification of the desired behavior of the machine.
                     More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#spec-and-status
                   properties:
                     bootstrap:
@@ -229,16 +231,21 @@
                           description: |-
                             dataSecretName is the name of the secret that stores the bootstrap data script.
                             If nil, the Machine should remain in the Pending state.
+                          maxLength: 253
+                          minLength: 0
                           type: string
                       type: object
                     clusterName:
                       description: clusterName is the name of the Cluster this object belongs to.
+                      maxLength: 63
                       minLength: 1
                       type: string
                     failureDomain:
                       description: |-
                         failureDomain is the failure domain the machine will be created in.
                         Must match a key in the FailureDomains map stored on the cluster object.
+                      maxLength: 256
+                      minLength: 1
                       type: string
                     infrastructureRef:
                       description: |-
@@ -314,6 +321,8 @@
                         and then a comparison is done to find out unregistered machines and are marked for delete.
                         This field will be set by the actuators and consumed by higher level entities like autoscaler that will
                         be interfacing with cluster-api as generic provider.
+                      maxLength: 512
+                      minLength: 1
                       type: string
                     readinessGates:
                       description: |-
@@ -336,12 +345,23 @@
                         properties:
                           conditionType:
                             description: |-
-                              conditionType refers to a positive polarity condition (status true means good) with matching type in the Machine's condition list.
+                              conditionType refers to a condition with matching type in the Machine's condition list.
                               If the conditions doesn't exist, it will be treated as unknown.
                               Note: Both Cluster API conditions or conditions added by 3rd party controllers can be used as readiness gates.
                             maxLength: 316
                             minLength: 1
                             pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                            type: string
+                          polarity:
+                            description: |-
+                              polarity of the conditionType specified in this readinessGate.
+                              Valid values are Positive, Negative and omitted.
+                              When omitted, the default behaviour will be Positive.
+                              A positive polarity means that the condition should report a true status under normal conditions.
+                              A negative polarity means that the condition should report a false status under normal conditions.
+                            enum:
+                              - Positive
+                              - Negative
                             type: string
                         required:
                           - conditionType
@@ -355,6 +375,8 @@
                       description: |-
                         version defines the desired Kubernetes version.
                         This field is meant to be optionally used by bootstrap providers.
+                      maxLength: 256
+                      minLength: 1
                       type: string
                   required:
                     - bootstrap
@@ -367,10 +389,10 @@
             - selector
           type: object
         status:
-          description: MachineSetStatus defines the observed state of MachineSet.
+          description: status is the observed state of MachineSet.
           properties:
             availableReplicas:
-              description: The number of available replicas (ready for at least minReadySeconds) for this MachineSet.
+              description: availableReplicas is the number of available replicas (ready for at least minReadySeconds) for this MachineSet.
               format: int32
               type: integer
             conditions:
@@ -380,27 +402,32 @@
                 properties:
                   lastTransitionTime:
                     description: |-
-                      Last time the condition transitioned from one status to another.
+                      lastTransitionTime is the last time the condition transitioned from one status to another.
                       This should be when the underlying condition changed. If that is not known, then using the time when
                       the API field changed is acceptable.
                     format: date-time
                     type: string
                   message:
                     description: |-
-                      A human readable message indicating details about the transition.
+                      message is a human readable message indicating details about the transition.
                       This field may be empty.
+                    maxLength: 10240
+                    minLength: 1
                     type: string
                   reason:
                     description: |-
-                      The reason for the condition's last transition in CamelCase.
+                      reason is the reason for the condition's last transition in CamelCase.
                       The specific API may choose whether or not this field is considered a guaranteed API.
                       This field may be empty.
+                    maxLength: 256
+                    minLength: 1
                     type: string
                   severity:
                     description: |-
                       severity provides an explicit classification of Reason code, so the users or machines can immediately
                       understand the current situation and act accordingly.
                       The Severity field MUST be set only when Status=False.
+                    maxLength: 32
                     type: string
                   status:
                     description: status of the condition, one of True, False, Unknown.
@@ -410,6 +437,8 @@
                       type of condition in CamelCase or in foo.example.com/CamelCase.
                       Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                       can be useful (see .node.status.conditions), the ability to deconflict is important.
+                    maxLength: 256
+                    minLength: 1
                     type: string
                 required:
                   - lastTransitionTime
@@ -418,10 +447,21 @@
                 type: object
               type: array
             failureMessage:
-              description: 'Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.'
+              description: |-
+                failureMessage will be set in the event that there is a terminal problem
+                reconciling the Machine and will contain a more verbose string suitable
+                for logging and human consumption.
+
+                Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
+              maxLength: 10240
+              minLength: 1
               type: string
             failureReason:
               description: |-
+                failureReason will be set in the event that there is a terminal problem
+                reconciling the Machine and will contain a succinct value suitable
+                for machine interpretation.
+
                 In the event that there is a terminal problem reconciling the
                 replicas, both FailureReason and FailureMessage will be set. FailureReason
                 will be populated with a succinct value suitable for machine
@@ -445,7 +485,7 @@
               type: string
             fullyLabeledReplicas:
               description: |-
-                The number of replicas that have labels matching the labels of the machine template of the MachineSet.
+                fullyLabeledReplicas is the number of replicas that have labels matching the labels of the machine template of the MachineSet.
 
                 Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
               format: int32
@@ -455,7 +495,7 @@
               format: int64
               type: integer
             readyReplicas:
-              description: The number of ready replicas for this MachineSet. A machine is considered ready when the node has been created and is "Ready".
+              description: readyReplicas is the number of ready replicas for this MachineSet. A machine is considered ready when the node has been created and is "Ready".
               format: int32
               type: integer
             replicas:
@@ -467,6 +507,8 @@
                 selector is the same as the label selector but in the string format to avoid introspection
                 by clients. The string will be in the same format as the query-param syntax.
                 More info about label selectors: http://kubernetes.io/docs/user-guide/labels#label-selectors
+              maxLength: 4096
+              minLength: 1
               type: string
             v1beta2:
               description: v1beta2 groups all the fields that will be added or modified in MachineSet's status with the V1Beta2 version.
