--- a/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-kubeadm-control-plane-manager-role.yaml
+++ b/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-kubeadm-control-plane-manager-role.yaml
@@ -14,6 +14,24 @@ metadata:
   name: capi-kubeadm-control-plane-manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - create
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - apiextensions.k8s.io
   resources:
   - customresourcedefinitions
@@ -21,6 +39,17 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - apiextensions.k8s.io
+  resourceNames:
+  - kubeadmcontrolplanes.controlplane.cluster.x-k8s.io
+  - kubeadmcontrolplanetemplates.controlplane.cluster.x-k8s.io
+  resources:
+  - customresourcedefinitions
+  - customresourcedefinitions/status
+  verbs:
+  - patch
+  - update
 - apiGroups:
   - authentication.k8s.io
   resources:
@@ -65,24 +94,6 @@ rules:
   verbs:
   - create
   - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - ""
-  resources:
-  - events
-  verbs:
-  - create
-  - patch
-- apiGroups:
-  - ""
-  resources:
-  - secrets
-  verbs:
-  - create
   - get
   - list
   - patch
